Fixed #2604: pretty anchors in generated .html
We use the name itself as anchor in <A NAME>.

--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesAfterBeginCode.html
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesAfterBeginCode.html
@@ -24,7 +24,7 @@
       >module</a
       ><a name="87"
       > </a
-      ><a name="88" href="AccidentalSpacesAfterBeginCode.html#1" class="Module"
+      ><a name="88" href="AccidentalSpacesAfterBeginCode.html#AccidentalSpacesAfterBeginCode" class="Module"
       >AccidentalSpacesAfterBeginCode</a
       ><a name="118"
       > </a
