--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.html
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.html
@@ -24,7 +24,7 @@
       >module</a
       ><a name="82"
       > </a
-      ><a name="83" href="AccidentalSpacesBeforeEndCode.html#1" class="Module"
+      ><a name="83" href="AccidentalSpacesBeforeEndCode.html#AccidentalSpacesBeforeEndCode" class="Module"
       >AccidentalSpacesBeforeEndCode</a
       ><a name="112"
       > </a
