--- a/test/LaTeXAndHTML/succeed/EscapedTeXComment.html
+++ b/test/LaTeXAndHTML/succeed/EscapedTeXComment.html
@@ -24,7 +24,7 @@
       >postulate</a
       ><a name="103"
       > </a
-      ><a name="104" href="EscapedTeXComment.html#104" class="Postulate"
+      ><a name="A" href="EscapedTeXComment.html#A" class="Postulate"
       >A</a
       ><a name="105"
       > </a
