--- a/test/LaTeXAndHTML/succeed/Grapheme-clusters.html
+++ b/test/LaTeXAndHTML/succeed/Grapheme-clusters.html
@@ -26,16 +26,16 @@
       ><a name="146"
       >
     </a
-      ><a name="151" href="Grapheme-clusters.html#151" class="Postulate"
+      ><a name="+&#818;+&#818;+&#818;+&#818;+&#818;+&#818;" href="Grapheme-clusters.html#+&#818;+&#818;+&#818;+&#818;+&#818;+&#818;" class="Postulate"
       >+&#818;+&#818;+&#818;+&#818;+&#818;+&#818;</a
       ><a name="163"
       >  </a
-      ><a name="165" href="Grapheme-clusters.html#165" class="Postulate"
+      ><a name="A" href="Grapheme-clusters.html#A" class="Postulate"
       >A</a
       ><a name="166"
       >
             </a
-      ><a name="179" href="Grapheme-clusters.html#179" class="Postulate"
+      ><a name="B" href="Grapheme-clusters.html#B" class="Postulate"
       >B</a
       ><a name="180"
       > </a
@@ -60,7 +60,7 @@ The two \AgdaKeyword{field} keywords should not be aligned:
       >record</a
       ><a name="280"
       > </a
-      ><a name="281" href="Grapheme-clusters.html#281" class="Record"
+      ><a name="+&#818;" href="Grapheme-clusters.html#+&#818;" class="Record"
       >+&#818;</a
       ><a name="283"
       > </a
@@ -80,7 +80,7 @@ The two \AgdaKeyword{field} keywords should not be aligned:
       >field</a
       ><a name="303"
       > </a
-      ><a name="304" href="Grapheme-clusters.html#304" class="Field"
+      ><a name="+&#818;.C" href="Grapheme-clusters.html#+&#818;.C" class="Field"
       >C</a
       ><a name="305"
       > </a
@@ -97,7 +97,7 @@ The two \AgdaKeyword{field} keywords should not be aligned:
       >field</a
       ><a name="343"
       > </a
-      ><a name="344" href="Grapheme-clusters.html#344" class="Field"
+      ><a name="+&#818;.D" href="Grapheme-clusters.html#+&#818;.D" class="Field"
       >D</a
       ><a name="345"
       > </a
