--- a/test/LaTeXAndHTML/succeed/Indenting.html
+++ b/test/LaTeXAndHTML/succeed/Indenting.html
@@ -24,7 +24,7 @@
       >data</a
       ><a name="80"
       > </a
-      ><a name="81" href="Indenting.html#81" class="Datatype"
+      ><a name="Nat" href="Indenting.html#Nat" class="Datatype"
       >Nat</a
       ><a name="84"
       > </a
@@ -41,7 +41,7 @@
       ><a name="96"
       >
   </a
-      ><a name="99" href="Indenting.html#99" class="InductiveConstructor"
+      ><a name="Nat.zero" href="Indenting.html#Nat.zero" class="InductiveConstructor"
       >zero</a
       ><a name="103"
       > </a
@@ -49,12 +49,12 @@
       >:</a
       ><a name="105"
       > </a
-      ><a name="106" href="Indenting.html#81" class="Datatype"
+      ><a name="106" href="Indenting.html#Nat" class="Datatype"
       >Nat</a
       ><a name="109"
       >
   </a
-      ><a name="112" href="Indenting.html#112" class="InductiveConstructor"
+      ><a name="Nat.suc" href="Indenting.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="115"
       > </a
@@ -62,7 +62,7 @@
       >:</a
       ><a name="117"
       > </a
-      ><a name="118" href="Indenting.html#81" class="Datatype"
+      ><a name="118" href="Indenting.html#Nat" class="Datatype"
       >Nat</a
       ><a name="121"
       > </a
@@ -70,7 +70,7 @@
       >-&gt;</a
       ><a name="124"
       > </a
-      ><a name="125" href="Indenting.html#81" class="Datatype"
+      ><a name="125" href="Indenting.html#Nat" class="Datatype"
       >Nat</a
       ><a name="128"
       >
