--- a/test/LaTeXAndHTML/succeed/Indenting3.html
+++ b/test/LaTeXAndHTML/succeed/Indenting3.html
@@ -24,7 +24,7 @@
       >record</a
       ><a name="82"
       > </a
-      ><a name="83" href="Indenting3.html#83" class="Record"
+      ><a name="Sigma" href="Indenting3.html#Sigma" class="Record"
       >Sigma</a
       ><a name="88"
       > </a
@@ -85,7 +85,7 @@
       >constructor</a
       ><a name="138"
       > </a
-      ><a name="139" href="Indenting3.html#139" class="InductiveConstructor Operator"
+      ><a name="Sigma._,_" href="Indenting3.html#Sigma._,_" class="InductiveConstructor Operator"
       >_,_</a
       ><a name="142"
       >
@@ -95,7 +95,7 @@
       ><a name="150"
       >
     </a
-      ><a name="155" href="Indenting3.html#155" class="Field"
+      ><a name="Sigma.proj&#8321;" href="Indenting3.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
       ><a name="160"
       > </a
@@ -108,7 +108,7 @@
       ><a name="164"
       >
     </a
-      ><a name="169" href="Indenting3.html#169" class="Field"
+      ><a name="Sigma.proj&#8322;" href="Indenting3.html#Sigma.proj&#8322;" class="Field"
       >proj&#8322;</a
       ><a name="174"
       > </a
@@ -120,7 +120,7 @@
       >B</a
       ><a name="178"
       > </a
-      ><a name="179" href="Indenting3.html#155" class="Field"
+      ><a name="179" href="Indenting3.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
       ><a name="184"
       >
@@ -130,7 +130,7 @@
       >open</a
       ><a name="190"
       > </a
-      ><a name="191" href="Indenting3.html#83" class="Module"
+      ><a name="191" href="Indenting3.html#Sigma" class="Module"
       >Sigma</a
       ><a name="196"
       > </a
