--- a/test/LaTeXAndHTML/succeed/Indenting4.html
+++ b/test/LaTeXAndHTML/succeed/Indenting4.html
@@ -24,7 +24,7 @@
       >module</a
       ><a name="82"
       > </a
-      ><a name="83" href="Indenting4.html#1" class="Module"
+      ><a name="83" href="Indenting4.html#Indenting4" class="Module"
       >Indenting4</a
       ><a name="93"
       > </a
@@ -40,7 +40,7 @@
       ><a name="112"
       >\begin{code}
   </a
-      ><a name="127" href="Indenting4.html#127" class="Function"
+      ><a name="Pow" href="Indenting4.html#Pow" class="Function"
       >Pow</a
       ><a name="130"
       > </a
@@ -61,7 +61,7 @@
       ><a name="143"
       >
   </a
-      ><a name="146" href="Indenting4.html#127" class="Function"
+      ><a name="146" href="Indenting4.html#Pow" class="Function"
       >Pow</a
       ><a name="149"
       > </a
