--- a/test/LaTeXAndHTML/succeed/Indenting6.html
+++ b/test/LaTeXAndHTML/succeed/Indenting6.html
@@ -22,7 +22,7 @@
       >record</a
       ><a name="80"
       > </a
-      ><a name="81" href="Indenting6.html#81" class="Record"
+      ><a name="Sigma" href="Indenting6.html#Sigma" class="Record"
       >Sigma</a
       ><a name="86"
       > </a
@@ -83,7 +83,7 @@
       >constructor</a
       ><a name="136"
       > </a
-      ><a name="137" href="Indenting6.html#137" class="InductiveConstructor Operator"
+      ><a name="Sigma._,_" href="Indenting6.html#Sigma._,_" class="InductiveConstructor Operator"
       >_,_</a
       ><a name="140"
       >
@@ -93,7 +93,7 @@
       ><a name="148"
       >
     </a
-      ><a name="153" href="Indenting6.html#153" class="Field"
+      ><a name="Sigma.proj&#8321;" href="Indenting6.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
       ><a name="158"
       > </a
@@ -106,7 +106,7 @@
       ><a name="162"
       >
     </a
-      ><a name="167" href="Indenting6.html#167" class="Field"
+      ><a name="Sigma.proj&#8322;" href="Indenting6.html#Sigma.proj&#8322;" class="Field"
       >proj&#8322;</a
       ><a name="172"
       > </a
@@ -118,7 +118,7 @@
       >B</a
       ><a name="176"
       > </a
-      ><a name="177" href="Indenting6.html#153" class="Field"
+      ><a name="177" href="Indenting6.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
       ><a name="182"
       >
@@ -128,7 +128,7 @@
       >open</a
       ><a name="188"
       > </a
-      ><a name="189" href="Indenting6.html#81" class="Module"
+      ><a name="189" href="Indenting6.html#Sigma" class="Module"
       >Sigma</a
       ><a name="194"
       > </a
@@ -148,7 +148,7 @@
       >record</a
       ><a name="233"
       > </a
-      ><a name="234" href="Indenting6.html#234" class="Record"
+      ><a name="Equiv" href="Indenting6.html#Equiv" class="Record"
       >Equiv</a
       ><a name="239"
       > </a
@@ -190,7 +190,7 @@
       ><a name="271"
       >
     </a
-      ><a name="276" href="Indenting6.html#276" class="Field"
+      ><a name="Equiv.to" href="Indenting6.html#Equiv.to" class="Field"
       >to</a
       ><a name="278"
       >    </a
@@ -211,7 +211,7 @@
       ><a name="289"
       >
     </a
-      ><a name="294" href="Indenting6.html#294" class="Field"
+      ><a name="Equiv.from" href="Indenting6.html#Equiv.from" class="Field"
       >from</a
       ><a name="298"
       >  </a
