--- a/test/LaTeXAndHTML/succeed/Indenting7.html
+++ b/test/LaTeXAndHTML/succeed/Indenting7.html
@@ -22,7 +22,7 @@
       >module</a
       ><a name="80"
       > </a
-      ><a name="81" href="Indenting7.html#1" class="Module"
+      ><a name="81" href="Indenting7.html#Indenting7" class="Module"
       >Indenting7</a
       ><a name="91"
       > </a
@@ -36,7 +36,7 @@
       >module</a
       ><a name="107"
       > </a
-      ><a name="108" href="Indenting7.html#108" class="Module"
+      ><a name="A&#8321;" href="Indenting7.html#A&#8321;" class="Module"
       >A&#8321;</a
       ><a name="110"
       > </a
@@ -49,7 +49,7 @@
       >module</a
       ><a name="125"
       > </a
-      ><a name="126" href="Indenting7.html#126" class="Module"
+      ><a name="A&#8322;" href="Indenting7.html#A&#8322;" class="Module"
       >A&#8322;</a
       ><a name="128"
       > </a
@@ -63,7 +63,7 @@
       >module</a
       ><a name="146"
       > </a
-      ><a name="147" href="Indenting7.html#147" class="Module"
+      ><a name="B&#8321;" href="Indenting7.html#B&#8321;" class="Module"
       >B&#8321;</a
       ><a name="149"
       > </a
@@ -76,7 +76,7 @@
       >module</a
       ><a name="166"
       > </a
-      ><a name="167" href="Indenting7.html#167" class="Module"
+      ><a name="B&#8322;" href="Indenting7.html#B&#8322;" class="Module"
       >B&#8322;</a
       ><a name="169"
       > </a
@@ -90,7 +90,7 @@
       >module</a
       ><a name="189"
       > </a
-      ><a name="190" href="Indenting7.html#190" class="Module"
+      ><a name="C&#8321;" href="Indenting7.html#C&#8321;" class="Module"
       >C&#8321;</a
       ><a name="192"
       > </a
@@ -103,7 +103,7 @@
       >module</a
       ><a name="211"
       > </a
-      ><a name="212" href="Indenting7.html#212" class="Module"
+      ><a name="C&#8322;" href="Indenting7.html#C&#8322;" class="Module"
       >C&#8322;</a
       ><a name="214"
       > </a
@@ -117,7 +117,7 @@
       >module</a
       ><a name="236"
       > </a
-      ><a name="237" href="Indenting7.html#237" class="Module"
+      ><a name="D&#8321;" href="Indenting7.html#D&#8321;" class="Module"
       >D&#8321;</a
       ><a name="239"
       > </a
@@ -130,7 +130,7 @@
       >module</a
       ><a name="260"
       > </a
-      ><a name="261" href="Indenting7.html#261" class="Module"
+      ><a name="D&#8322;" href="Indenting7.html#D&#8322;" class="Module"
       >D&#8322;</a
       ><a name="263"
       > </a
@@ -144,7 +144,7 @@
       >module</a
       ><a name="283"
       > </a
-      ><a name="284" href="Indenting7.html#284" class="Module"
+      ><a name="C&#8323;" href="Indenting7.html#C&#8323;" class="Module"
       >C&#8323;</a
       ><a name="286"
       > </a
@@ -157,7 +157,7 @@
       >module</a
       ><a name="305"
       > </a
-      ><a name="306" href="Indenting7.html#306" class="Module"
+      ><a name="C&#8324;" href="Indenting7.html#C&#8324;" class="Module"
       >C&#8324;</a
       ><a name="308"
       > </a
@@ -171,7 +171,7 @@
       >module</a
       ><a name="324"
       > </a
-      ><a name="325" href="Indenting7.html#325" class="Module"
+      ><a name="A&#8323;" href="Indenting7.html#A&#8323;" class="Module"
       >A&#8323;</a
       ><a name="327"
       > </a
@@ -184,7 +184,7 @@
       >module</a
       ><a name="344"
       > </a
-      ><a name="345" href="Indenting7.html#345" class="Module"
+      ><a name="B&#8323;" href="Indenting7.html#B&#8323;" class="Module"
       >B&#8323;</a
       ><a name="347"
       > </a
@@ -197,7 +197,7 @@
       >module</a
       ><a name="366"
       > </a
-      ><a name="367" href="Indenting7.html#367" class="Module"
+      ><a name="C&#8325;" href="Indenting7.html#C&#8325;" class="Module"
       >C&#8325;</a
       ><a name="369"
       > </a
@@ -210,7 +210,7 @@
       >module</a
       ><a name="390"
       > </a
-      ><a name="391" href="Indenting7.html#391" class="Module"
+      ><a name="D&#8323;" href="Indenting7.html#D&#8323;" class="Module"
       >D&#8323;</a
       ><a name="393"
       > </a
@@ -223,7 +223,7 @@
       >module</a
       ><a name="412"
       > </a
-      ><a name="413" href="Indenting7.html#413" class="Module"
+      ><a name="C&#8326;" href="Indenting7.html#C&#8326;" class="Module"
       >C&#8326;</a
       ><a name="415"
       > </a
@@ -236,7 +236,7 @@
       >module</a
       ><a name="432"
       > </a
-      ><a name="433" href="Indenting7.html#433" class="Module"
+      ><a name="B&#8324;" href="Indenting7.html#B&#8324;" class="Module"
       >B&#8324;</a
       ><a name="435"
       > </a
@@ -249,7 +249,7 @@
       >module</a
       ><a name="450"
       > </a
-      ><a name="451" href="Indenting7.html#451" class="Module"
+      ><a name="A&#8324;" href="Indenting7.html#A&#8324;" class="Module"
       >A&#8324;</a
       ><a name="453"
       > </a
