--- a/test/LaTeXAndHTML/succeed/IndentingContainer.html
+++ b/test/LaTeXAndHTML/succeed/IndentingContainer.html
@@ -24,7 +24,7 @@
       >record</a
       ><a name="82"
       > </a
-      ><a name="83" href="IndentingContainer.html#83" class="Record"
+      ><a name="Sigma" href="IndentingContainer.html#Sigma" class="Record"
       >Sigma</a
       ><a name="88"
       > </a
@@ -85,7 +85,7 @@
       >constructor</a
       ><a name="138"
       > </a
-      ><a name="139" href="IndentingContainer.html#139" class="InductiveConstructor Operator"
+      ><a name="Sigma._,_" href="IndentingContainer.html#Sigma._,_" class="InductiveConstructor Operator"
       >_,_</a
       ><a name="142"
       >
@@ -95,7 +95,7 @@
       ><a name="150"
       >
     </a
-      ><a name="155" href="IndentingContainer.html#155" class="Field"
+      ><a name="Sigma.proj&#8321;" href="IndentingContainer.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
       ><a name="160"
       > </a
@@ -108,7 +108,7 @@
       ><a name="164"
       >
     </a
-      ><a name="169" href="IndentingContainer.html#169" class="Field"
+      ><a name="Sigma.proj&#8322;" href="IndentingContainer.html#Sigma.proj&#8322;" class="Field"
       >proj&#8322;</a
       ><a name="174"
       > </a
@@ -120,7 +120,7 @@
       >B</a
       ><a name="178"
       > </a
-      ><a name="179" href="IndentingContainer.html#155" class="Field"
+      ><a name="179" href="IndentingContainer.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
       ><a name="184"
       >
@@ -130,7 +130,7 @@
       >open</a
       ><a name="190"
       > </a
-      ><a name="191" href="IndentingContainer.html#83" class="Module"
+      ><a name="191" href="IndentingContainer.html#Sigma" class="Module"
       >Sigma</a
       ><a name="196"
       > </a
@@ -146,7 +146,7 @@
       ><a name="216"
       >\begin{code}
 </a
-      ><a name="229" href="IndentingContainer.html#229" class="Function"
+      ><a name="uncurry" href="IndentingContainer.html#uncurry" class="Function"
       >uncurry</a
       ><a name="236"
       > </a
@@ -204,7 +204,7 @@
       >:</a
       ><a name="267"
       > </a
-      ><a name="268" href="IndentingContainer.html#83" class="Record"
+      ><a name="268" href="IndentingContainer.html#Sigma" class="Record"
       >Sigma</a
       ><a name="273"
       > </a
@@ -285,7 +285,7 @@
       >x</a
       ><a name="324"
       > </a
-      ><a name="325" href="IndentingContainer.html#139" class="InductiveConstructor Operator"
+      ><a name="325" href="IndentingContainer.html#Sigma._,_" class="InductiveConstructor Operator"
       >,</a
       ><a name="326"
       > </a
@@ -310,7 +310,7 @@
       >:</a
       ><a name="348"
       > </a
-      ><a name="349" href="IndentingContainer.html#83" class="Record"
+      ><a name="349" href="IndentingContainer.html#Sigma" class="Record"
       >Sigma</a
       ><a name="354"
       > </a
@@ -339,7 +339,7 @@
       ><a name="366"
       >
 </a
-      ><a name="367" href="IndentingContainer.html#229" class="Function"
+      ><a name="367" href="IndentingContainer.html#uncurry" class="Function"
       >uncurry</a
       ><a name="374"
       > </a
@@ -353,7 +353,7 @@
       >x</a
       ><a name="379"
       > </a
-      ><a name="380" href="IndentingContainer.html#139" class="InductiveConstructor Operator"
+      ><a name="380" href="IndentingContainer.html#Sigma._,_" class="InductiveConstructor Operator"
       >,</a
       ><a name="381"
       > </a
@@ -391,7 +391,7 @@
       >record</a
       ><a name="424"
       > </a
-      ><a name="425" href="IndentingContainer.html#425" class="Record"
+      ><a name="Container" href="IndentingContainer.html#Container" class="Record"
       >Container</a
       ><a name="434"
       > </a
@@ -412,7 +412,7 @@
       >constructor</a
       ><a name="461"
       > </a
-      ><a name="462" href="IndentingContainer.html#462" class="InductiveConstructor Operator"
+      ><a name="Container._&#9667;_" href="IndentingContainer.html#Container._&#9667;_" class="InductiveConstructor Operator"
       >_&#9667;_</a
       ><a name="465"
       >
@@ -422,7 +422,7 @@
       ><a name="473"
       >
     </a
-      ><a name="478" href="IndentingContainer.html#478" class="Field"
+      ><a name="Container.Parameter" href="IndentingContainer.html#Container.Parameter" class="Field"
       >Parameter</a
       ><a name="487"
       > </a
@@ -435,7 +435,7 @@
       ><a name="493"
       >
     </a
-      ><a name="498" href="IndentingContainer.html#498" class="Field"
+      ><a name="Container.Arity" href="IndentingContainer.html#Container.Arity" class="Field"
       >Arity</a
       ><a name="503"
       > </a
@@ -443,7 +443,7 @@
       >:</a
       ><a name="505"
       > </a
-      ><a name="506" href="IndentingContainer.html#478" class="Field"
+      ><a name="506" href="IndentingContainer.html#Container.Parameter" class="Field"
       >Parameter</a
       ><a name="515"
       > </a
