--- a/test/LaTeXAndHTML/succeed/InfixDeclaration.html
+++ b/test/LaTeXAndHTML/succeed/InfixDeclaration.html
@@ -23,7 +23,7 @@
       >module</a
       ><a name="81"
       > </a
-      ><a name="82" href="InfixDeclaration.html#1" class="Module"
+      ><a name="82" href="InfixDeclaration.html#InfixDeclaration" class="Module"
       >InfixDeclaration</a
       ><a name="98"
       > </a
@@ -41,11 +41,11 @@
       >5</a
       ><a name="113"
       > </a
-      ><a name="114" href="InfixDeclaration.html#130" class="Datatype Operator"
+      ><a name="_&gt;&gt;_" href="InfixDeclaration.html#_&gt;&gt;_" class="Datatype Operator"
       >_&gt;&gt;_</a
       ><a name="118"
       > </a
-      ><a name="119" href="InfixDeclaration.html#152" class="Datatype Operator"
+      ><a name="_&lt;&lt;_" href="InfixDeclaration.html#_&lt;&lt;_" class="Datatype Operator"
       >_&lt;&lt;_</a
       ><a name="123"
       >
@@ -55,7 +55,7 @@
       >data</a
       ><a name="129"
       > </a
-      ><a name="130" href="InfixDeclaration.html#130" class="Datatype Operator"
+      ><a name="_&gt;&gt;_" href="InfixDeclaration.html#_&gt;&gt;_" class="Datatype Operator"
       >_&gt;&gt;_</a
       ><a name="134"
       > </a
@@ -76,7 +76,7 @@
       >data</a
       ><a name="151"
       > </a
-      ><a name="152" href="InfixDeclaration.html#152" class="Datatype Operator"
+      ><a name="_&lt;&lt;_" href="InfixDeclaration.html#_&lt;&lt;_" class="Datatype Operator"
       >_&lt;&lt;_</a
       ><a name="156"
       > </a
@@ -107,7 +107,7 @@ Let's try some infix declaration with surrounding text.
       >module</a
       ><a name="258"
       > </a
-      ><a name="259" href="InfixDeclaration.html#259" class="Module"
+      ><a name="SurroundingText" href="InfixDeclaration.html#SurroundingText" class="Module"
       >SurroundingText</a
       ><a name="274"
       > </a
@@ -134,11 +134,11 @@ In the following, we declare the fixity of two operators.
       >5</a
       ><a name="375"
       > </a
-      ><a name="376" href="InfixDeclaration.html#492" class="Postulate Operator"
+      ><a name="SurroundingText._+_" href="InfixDeclaration.html#SurroundingText._+_" class="Postulate Operator"
       >_+_</a
       ><a name="379"
       > </a
-      ><a name="380" href="InfixDeclaration.html#496" class="Postulate Operator"
+      ><a name="SurroundingText._*_" href="InfixDeclaration.html#SurroundingText._*_" class="Postulate Operator"
       >_*_</a
       ><a name="383"
       >
@@ -156,11 +156,11 @@ A fixity declaration can preceed the actual declaration of the names.
       >postulate</a
       ><a name="491"
       > </a
-      ><a name="492" href="InfixDeclaration.html#492" class="Postulate Operator"
+      ><a name="SurroundingText._+_" href="InfixDeclaration.html#SurroundingText._+_" class="Postulate Operator"
       >_+_</a
       ><a name="495"
       > </a
-      ><a name="496" href="InfixDeclaration.html#496" class="Postulate Operator"
+      ><a name="SurroundingText._*_" href="InfixDeclaration.html#SurroundingText._*_" class="Postulate Operator"
       >_*_</a
       ><a name="499"
       > </a
