--- a/test/LaTeXAndHTML/succeed/Issue1062.html
+++ b/test/LaTeXAndHTML/succeed/Issue1062.html
@@ -51,7 +51,7 @@
       >BUILTIN</a
       ><a name="144"
       > SIZE    </a
-      ><a name="153" href="Issue1062.html#153" class="Postulate"
+      ><a name="Size" href="Issue1062.html#Size" class="Postulate"
       >Size</a
       ><a name="157"
       >   </a
@@ -68,7 +68,7 @@
       >BUILTIN</a
       ><a name="175"
       > SIZELT  </a
-      ><a name="184" href="Issue1062.html#184" class="Postulate Operator"
+      ><a name="Size&lt;_" href="Issue1062.html#Size&lt;_" class="Postulate Operator"
       >Size&lt;_</a
       ><a name="190"
       > </a
@@ -85,7 +85,7 @@
       >BUILTIN</a
       ><a name="206"
       > SIZESUC </a
-      ><a name="215" href="Issue1062.html#215" class="Postulate Operator"
+      ><a name="&#8593;_" href="Issue1062.html#&#8593;_" class="Postulate Operator"
       >&#8593;_</a
       ><a name="217"
       >     </a
@@ -102,7 +102,7 @@
       >BUILTIN</a
       ><a name="237"
       > SIZEINF </a
-      ><a name="246" href="Issue1062.html#246" class="Postulate"
+      ><a name="&#8734;" href="Issue1062.html#&#8734;" class="Postulate"
       >&#8734;</a
       ><a name="247"
       >      </a
@@ -116,7 +116,7 @@
       >data</a
       ><a name="262"
       > </a
-      ><a name="263" href="Issue1062.html#263" class="Datatype"
+      ><a name="List" href="Issue1062.html#List" class="Datatype"
       >List</a
       ><a name="267"
       > </a
@@ -149,7 +149,7 @@
       ><a name="289"
       >
   </a
-      ><a name="292" href="Issue1062.html#292" class="InductiveConstructor"
+      ><a name="List.[]" href="Issue1062.html#List.[]" class="InductiveConstructor"
       >[]</a
       ><a name="294"
       > </a
@@ -157,7 +157,7 @@
       >:</a
       ><a name="296"
       > </a
-      ><a name="297" href="Issue1062.html#263" class="Datatype"
+      ><a name="297" href="Issue1062.html#List" class="Datatype"
       >List</a
       ><a name="301"
       > </a
@@ -166,7 +166,7 @@
       ><a name="303"
       >
   </a
-      ><a name="306" href="Issue1062.html#306" class="InductiveConstructor Operator"
+      ><a name="List._&#8759;_" href="Issue1062.html#List._&#8759;_" class="InductiveConstructor Operator"
       >_&#8759;_</a
       ><a name="309"
       > </a
@@ -200,7 +200,7 @@
       >:</a
       ><a name="325"
       > </a
-      ><a name="326" href="Issue1062.html#263" class="Datatype"
+      ><a name="326" href="Issue1062.html#List" class="Datatype"
       >List</a
       ><a name="330"
       > </a
@@ -214,7 +214,7 @@
       >-&gt;</a
       ><a name="336"
       > </a
-      ><a name="337" href="Issue1062.html#263" class="Datatype"
+      ><a name="337" href="Issue1062.html#List" class="Datatype"
       >List</a
       ><a name="341"
       > </a
@@ -228,7 +228,7 @@
       >record</a
       ><a name="351"
       > </a
-      ><a name="352" href="Issue1062.html#352" class="Record Operator"
+      ><a name="_&#215;_" href="Issue1062.html#_&#215;_" class="Record Operator"
       >_&#215;_</a
       ><a name="355"
       > </a
@@ -269,7 +269,7 @@
       >constructor</a
       ><a name="393"
       > </a
-      ><a name="394" href="Issue1062.html#394" class="InductiveConstructor Operator"
+      ><a name="_&#215;_._,_" href="Issue1062.html#_&#215;_._,_" class="InductiveConstructor Operator"
       >_,_</a
       ><a name="397"
       >
@@ -279,7 +279,7 @@
       ><a name="405"
       >
     </a
-      ><a name="410" href="Issue1062.html#410" class="Field"
+      ><a name="_&#215;_.fst" href="Issue1062.html#_&#215;_.fst" class="Field"
       >fst</a
       ><a name="413"
       > </a
@@ -292,7 +292,7 @@
       ><a name="417"
       >
     </a
-      ><a name="422" href="Issue1062.html#422" class="Field"
+      ><a name="_&#215;_.snd" href="Issue1062.html#_&#215;_.snd" class="Field"
       >snd</a
       ><a name="425"
       > </a
@@ -309,7 +309,7 @@
       >open</a
       ><a name="434"
       > </a
-      ><a name="435" href="Issue1062.html#352" class="Module Operator"
+      ><a name="435" href="Issue1062.html#_&#215;_" class="Module Operator"
       >_&#215;_</a
       ><a name="438"
       >
@@ -325,7 +325,7 @@
       >record</a
       ><a name="479"
       > </a
-      ><a name="480" href="Issue1062.html#480" class="Record"
+      ><a name="Stream" href="Issue1062.html#Stream" class="Record"
       >Stream</a
       ><a name="486"
       > </a
@@ -339,7 +339,7 @@
       >:</a
       ><a name="491"
       > </a
-      ><a name="492" href="Issue1062.html#153" class="Postulate"
+      ><a name="492" href="Issue1062.html#Size" class="Postulate"
       >Size</a
       ><a name="496" class="Symbol"
       >}</a
@@ -384,7 +384,7 @@
       >constructor</a
       ><a name="546"
       > </a
-      ><a name="547" href="Issue1062.html#547" class="CoinductiveConstructor Operator"
+      ><a name="Stream._&#8759;_" href="Issue1062.html#Stream._&#8759;_" class="CoinductiveConstructor Operator"
       >_&#8759;_</a
       ><a name="550"
       >
@@ -394,7 +394,7 @@
       ><a name="558"
       >
     </a
-      ><a name="563" href="Issue1062.html#563" class="Field"
+      ><a name="Stream.head" href="Issue1062.html#Stream.head" class="Field"
       >head</a
       ><a name="567"
       >  </a
@@ -407,7 +407,7 @@
       ><a name="572"
       >
     </a
-      ><a name="577" href="Issue1062.html#577" class="Field"
+      ><a name="Stream.tail" href="Issue1062.html#Stream.tail" class="Field"
       >tail</a
       ><a name="581"
       >  </a
@@ -429,7 +429,7 @@
       >:</a
       ><a name="591"
       > </a
-      ><a name="592" href="Issue1062.html#184" class="Postulate Operator"
+      ><a name="592" href="Issue1062.html#Size&lt;_" class="Postulate Operator"
       >Size&lt;</a
       ><a name="597"
       > </a
@@ -443,7 +443,7 @@
       >&#8594;</a
       ><a name="602"
       > </a
-      ><a name="603" href="Issue1062.html#480" class="Record"
+      ><a name="603" href="Issue1062.html#Stream" class="Record"
       >Stream</a
       ><a name="609"
       > </a
@@ -464,7 +464,7 @@
       >open</a
       ><a name="620"
       > </a
-      ><a name="621" href="Issue1062.html#480" class="Module"
+      ><a name="621" href="Issue1062.html#Stream" class="Module"
       >Stream</a
       ><a name="627"
       > </a
@@ -474,7 +474,7 @@
       >
 
 </a
-      ><a name="636" href="Issue1062.html#636" class="Function Operator"
+      ><a name="_&#8759;&#738;_" href="Issue1062.html#_&#8759;&#738;_" class="Function Operator"
       >_&#8759;&#738;_</a
       ><a name="640"
       > </a
@@ -510,7 +510,7 @@
       >&#8594;</a
       ><a name="656"
       > </a
-      ><a name="657" href="Issue1062.html#480" class="Record"
+      ><a name="657" href="Issue1062.html#Stream" class="Record"
       >Stream</a
       ><a name="663"
       > </a
@@ -530,13 +530,13 @@
       >&#8594;</a
       ><a name="671"
       > </a
-      ><a name="672" href="Issue1062.html#480" class="Record"
+      ><a name="672" href="Issue1062.html#Stream" class="Record"
       >Stream</a
       ><a name="678"
       > </a
       ><a name="679" class="Symbol"
       >{</a
-      ><a name="680" href="Issue1062.html#215" class="Postulate Operator"
+      ><a name="680" href="Issue1062.html#&#8593;_" class="Postulate Operator"
       >&#8593;</a
       ><a name="681"
       > </a
@@ -551,7 +551,7 @@
       ><a name="686"
       >
 </a
-      ><a name="687" href="Issue1062.html#563" class="Field"
+      ><a name="687" href="Issue1062.html#Stream.head" class="Field"
       >head</a
       ><a name="691"
       >  </a
@@ -561,7 +561,7 @@
       >a</a
       ><a name="695"
       > </a
-      ><a name="696" href="Issue1062.html#636" class="Function Operator"
+      ><a name="696" href="Issue1062.html#_&#8759;&#738;_" class="Function Operator"
       >&#8759;&#738;</a
       ><a name="698"
       > </a
@@ -580,7 +580,7 @@
       ><a name="706"
       >
 </a
-      ><a name="707" href="Issue1062.html#577" class="Field"
+      ><a name="707" href="Issue1062.html#Stream.tail" class="Field"
       >tail</a
       ><a name="711"
       >  </a
@@ -590,7 +590,7 @@
       >a</a
       ><a name="715"
       > </a
-      ><a name="716" href="Issue1062.html#636" class="Function Operator"
+      ><a name="716" href="Issue1062.html#_&#8759;&#738;_" class="Function Operator"
       >&#8759;&#738;</a
       ><a name="718"
       > </a
@@ -622,7 +622,7 @@
       >
 
 </a
-      ><a name="787" href="Issue1062.html#787" class="Function Operator"
+      ><a name="_++&#738;_" href="Issue1062.html#_++&#738;_" class="Function Operator"
       >_++&#738;_</a
       ><a name="792"
       > </a
@@ -650,7 +650,7 @@
       >&#8594;</a
       ><a name="804"
       > </a
-      ><a name="805" href="Issue1062.html#263" class="Datatype"
+      ><a name="805" href="Issue1062.html#List" class="Datatype"
       >List</a
       ><a name="809"
       > </a
@@ -662,7 +662,7 @@
       >&#8594;</a
       ><a name="813"
       > </a
-      ><a name="814" href="Issue1062.html#480" class="Record"
+      ><a name="814" href="Issue1062.html#Stream" class="Record"
       >Stream</a
       ><a name="820"
       > </a
@@ -682,7 +682,7 @@
       >&#8594;</a
       ><a name="828"
       > </a
-      ><a name="829" href="Issue1062.html#480" class="Record"
+      ><a name="829" href="Issue1062.html#Stream" class="Record"
       >Stream</a
       ><a name="835"
       > </a
@@ -699,11 +699,11 @@
       ><a name="841"
       >
 </a
-      ><a name="842" href="Issue1062.html#292" class="InductiveConstructor"
+      ><a name="842" href="Issue1062.html#List.[]" class="InductiveConstructor"
       >[]</a
       ><a name="844"
       >        </a
-      ><a name="852" href="Issue1062.html#787" class="Function Operator"
+      ><a name="852" href="Issue1062.html#_++&#738;_" class="Function Operator"
       >++&#738;</a
       ><a name="855"
       > </a
@@ -726,7 +726,7 @@
       >a</a
       ><a name="864"
       > </a
-      ><a name="865" href="Issue1062.html#306" class="InductiveConstructor Operator"
+      ><a name="865" href="Issue1062.html#List._&#8759;_" class="InductiveConstructor Operator"
       >&#8759;</a
       ><a name="866"
       > </a
@@ -736,7 +736,7 @@
       >)</a
       ><a name="870"
       >  </a
-      ><a name="872" href="Issue1062.html#787" class="Function Operator"
+      ><a name="872" href="Issue1062.html#_++&#738;_" class="Function Operator"
       >++&#738;</a
       ><a name="875"
       > </a
@@ -752,7 +752,7 @@
       >a</a
       ><a name="881"
       > </a
-      ><a name="882" href="Issue1062.html#636" class="Function Operator"
+      ><a name="882" href="Issue1062.html#_&#8759;&#738;_" class="Function Operator"
       >&#8759;&#738;</a
       ><a name="884"
       > </a
@@ -762,7 +762,7 @@
       >as</a
       ><a name="888"
       > </a
-      ><a name="889" href="Issue1062.html#787" class="Function Operator"
+      ><a name="889" href="Issue1062.html#_++&#738;_" class="Function Operator"
       >++&#738;</a
       ><a name="892"
       > </a
@@ -784,7 +784,7 @@
       >record</a
       ><a name="957"
       > </a
-      ><a name="958" href="Issue1062.html#958" class="Record"
+      ><a name="List1" href="Issue1062.html#List1" class="Record"
       >List1</a
       ><a name="963"
       > </a
@@ -821,7 +821,7 @@
       >constructor</a
       ><a name="999"
       > </a
-      ><a name="1000" href="Issue1062.html#1000" class="InductiveConstructor Operator"
+      ><a name="List1._&#8759;_" href="Issue1062.html#List1._&#8759;_" class="InductiveConstructor Operator"
       >_&#8759;_</a
       ><a name="1003"
       >
@@ -831,7 +831,7 @@
       ><a name="1011"
       >
     </a
-      ><a name="1016" href="Issue1062.html#1016" class="Field"
+      ><a name="List1.head" href="Issue1062.html#List1.head" class="Field"
       >head</a
       ><a name="1020"
       >  </a
@@ -844,7 +844,7 @@
       ><a name="1025"
       >
     </a
-      ><a name="1030" href="Issue1062.html#1030" class="Field"
+      ><a name="List1.tail" href="Issue1062.html#List1.tail" class="Field"
       >tail</a
       ><a name="1034"
       >  </a
@@ -852,7 +852,7 @@
       >:</a
       ><a name="1037"
       > </a
-      ><a name="1038" href="Issue1062.html#263" class="Datatype"
+      ><a name="1038" href="Issue1062.html#List" class="Datatype"
       >List</a
       ><a name="1042"
       > </a
@@ -865,7 +865,7 @@
       >open</a
       ><a name="1049"
       > </a
-      ><a name="1050" href="Issue1062.html#958" class="Module"
+      ><a name="1050" href="Issue1062.html#List1" class="Module"
       >List1</a
       ><a name="1055"
       > </a
@@ -875,13 +875,13 @@
       > </a
       ><a name="1062" class="Symbol"
       >(</a
-      ><a name="1063" href="Issue1062.html#1016" class="Field"
+      ><a name="1063" href="Issue1062.html#List1.head" class="Field"
       >head</a
       ><a name="1067" class="Symbol"
       >;</a
       ><a name="1068"
       > </a
-      ><a name="1069" href="Issue1062.html#1030" class="Field"
+      ><a name="1069" href="Issue1062.html#List1.tail" class="Field"
       >tail</a
       ><a name="1073" class="Symbol"
       >)</a
@@ -893,7 +893,7 @@
       >record</a
       ><a name="1082"
       > </a
-      ><a name="1083" href="Issue1062.html#1083" class="Record"
+      ><a name="&#8868;" href="Issue1062.html#&#8868;" class="Record"
       >&#8868;</a
       ><a name="1084"
       > </a
@@ -913,7 +913,7 @@
       >constructor</a
       ><a name="1108"
       > </a
-      ><a name="1109" href="Issue1062.html#1109" class="InductiveConstructor"
+      ><a name="&#8868;.trivial" href="Issue1062.html#&#8868;.trivial" class="InductiveConstructor"
       >trivial</a
       ><a name="1116"
       >
@@ -922,21 +922,21 @@
       >open</a
       ><a name="1121"
       > </a
-      ><a name="1122" href="Issue1062.html#958" class="Module"
+      ><a name="1122" href="Issue1062.html#List1" class="Module"
       >List1</a
       ><a name="1127"
       > </a
       ><a name="1128" class="Symbol"
       >(</a
-      ><a name="1129" href="Issue1062.html#1109" class="InductiveConstructor"
+      ><a name="1129" href="Issue1062.html#&#8868;.trivial" class="InductiveConstructor"
       >trivial</a
       ><a name="1136"
       > </a
-      ><a name="1137" href="Issue1062.html#1000" class="InductiveConstructor Operator"
+      ><a name="1137" href="Issue1062.html#List1._&#8759;_" class="InductiveConstructor Operator"
       >&#8759;</a
       ><a name="1138"
       > </a
-      ><a name="1139" href="Issue1062.html#292" class="InductiveConstructor"
+      ><a name="1139" href="Issue1062.html#List.[]" class="InductiveConstructor"
       >[]</a
       ><a name="1141" class="Symbol"
       >)</a
@@ -964,7 +964,7 @@
       >
 
 </a
-      ><a name="1195" href="Issue1062.html#1195" class="Function"
+      ><a name="unfold&#8314;" href="Issue1062.html#unfold&#8314;" class="Function"
       >unfold&#8314;</a
       ><a name="1202"
       > </a
@@ -986,7 +986,7 @@
       >:</a
       ><a name="1211"
       > </a
-      ><a name="1212" href="Issue1062.html#153" class="Postulate"
+      ><a name="1212" href="Issue1062.html#Size" class="Postulate"
       >Size</a
       ><a name="1216"
       > </a
@@ -1056,7 +1056,7 @@
       >&#8594;</a
       ><a name="1258"
       > </a
-      ><a name="1259" href="Issue1062.html#958" class="Record"
+      ><a name="1259" href="Issue1062.html#List1" class="Record"
       >List1</a
       ><a name="1264"
       > </a
@@ -1064,7 +1064,7 @@
       >A</a
       ><a name="1266"
       > </a
-      ><a name="1267" href="Issue1062.html#352" class="Record Operator"
+      ><a name="1267" href="Issue1062.html#_&#215;_" class="Record Operator"
       >&#215;</a
       ><a name="1268"
       > </a
@@ -1082,7 +1082,7 @@
       >:</a
       ><a name="1276"
       > </a
-      ><a name="1277" href="Issue1062.html#184" class="Postulate Operator"
+      ><a name="1277" href="Issue1062.html#Size&lt;_" class="Postulate Operator"
       >Size&lt;</a
       ><a name="1282"
       > </a
@@ -1152,7 +1152,7 @@
       >&#8594;</a
       ><a name="1318"
       > </a
-      ><a name="1319" href="Issue1062.html#480" class="Record"
+      ><a name="1319" href="Issue1062.html#Stream" class="Record"
       >Stream</a
       ><a name="1325"
       > </a
@@ -1170,13 +1170,13 @@
       >
 
 </a
-      ><a name="1333" href="Issue1062.html#563" class="Field"
+      ><a name="1333" href="Issue1062.html#Stream.head" class="Field"
       >head</a
       ><a name="1337"
       >  </a
       ><a name="1339" class="Symbol"
       >(</a
-      ><a name="1340" href="Issue1062.html#1195" class="Function"
+      ><a name="1340" href="Issue1062.html#unfold&#8314;" class="Function"
       >unfold&#8314;</a
       ><a name="1347"
       > </a
@@ -1194,13 +1194,13 @@
       >=</a
       ><a name="1357"
       >  </a
-      ><a name="1359" href="Issue1062.html#1016" class="Field"
+      ><a name="1359" href="Issue1062.html#List1.head" class="Field"
       >head</a
       ><a name="1363"
       > </a
       ><a name="1364" class="Symbol"
       >(</a
-      ><a name="1365" href="Issue1062.html#410" class="Field"
+      ><a name="1365" href="Issue1062.html#_&#215;_.fst" class="Field"
       >fst</a
       ><a name="1368"
       > </a
@@ -1217,13 +1217,13 @@
       ><a name="1378"
       >
 </a
-      ><a name="1379" href="Issue1062.html#577" class="Field"
+      ><a name="1379" href="Issue1062.html#Stream.tail" class="Field"
       >tail</a
       ><a name="1383"
       >  </a
       ><a name="1385" class="Symbol"
       >(</a
-      ><a name="1386" href="Issue1062.html#1195" class="Function"
+      ><a name="1386" href="Issue1062.html#unfold&#8314;" class="Function"
       >unfold&#8314;</a
       ><a name="1393"
       > </a
@@ -1249,7 +1249,7 @@
       >((_</a
       ><a name="1413"
       > </a
-      ><a name="1414" href="Issue1062.html#1000" class="InductiveConstructor Operator"
+      ><a name="1414" href="Issue1062.html#List1._&#8759;_" class="InductiveConstructor Operator"
       >&#8759;</a
       ><a name="1415"
       > </a
@@ -1259,7 +1259,7 @@
       >)</a
       ><a name="1418"
       > </a
-      ><a name="1419" href="Issue1062.html#394" class="InductiveConstructor Operator"
+      ><a name="1419" href="Issue1062.html#_&#215;_._,_" class="InductiveConstructor Operator"
       >,</a
       ><a name="1420"
       > </a
@@ -1290,11 +1290,11 @@
       >l</a
       ><a name="1466"
       > </a
-      ><a name="1467" href="Issue1062.html#787" class="Function Operator"
+      ><a name="1467" href="Issue1062.html#_++&#738;_" class="Function Operator"
       >++&#738;</a
       ><a name="1470"
       > </a
-      ><a name="1471" href="Issue1062.html#1195" class="Function"
+      ><a name="1471" href="Issue1062.html#unfold&#8314;" class="Function"
       >unfold&#8314;</a
       ><a name="1478"
       > </a
