--- a/test/LaTeXAndHTML/succeed/Issue2019.html
+++ b/test/LaTeXAndHTML/succeed/Issue2019.html
@@ -34,7 +34,7 @@
       ><a name="161"
       >
   </a
-      ><a name="164" href="Issue2019.html#164" class="Postulate"
+      ><a name="s00A0" href="Issue2019.html#s00A0" class="Postulate"
       >s00A0</a
       ><a name="169"
       >&#160;</a
@@ -51,7 +51,7 @@
       ><a name="231"
       >
   </a
-      ><a name="234" href="Issue2019.html#234" class="Postulate"
+      ><a name="s2004" href="Issue2019.html#s2004" class="Postulate"
       >s2004</a
       ><a name="239"
       >&#8196;</a
@@ -68,7 +68,7 @@
       ><a name="301"
       >
   </a
-      ><a name="304" href="Issue2019.html#304" class="Postulate"
+      ><a name="s202F" href="Issue2019.html#s202F" class="Postulate"
       >s202F</a
       ><a name="309"
       >&#8239;</a
@@ -101,7 +101,7 @@
       >import</a
       ><a name="449"
       > </a
-      ><a name="450" href="Agda.Builtin.String.html#1" class="Module"
+      ><a name="450" href="Agda.Builtin.String.html#Agda" class="Module"
       >Agda.Builtin.String</a
       ><a name="469"
       >
@@ -113,7 +113,7 @@
       >
 
 </a
-      ><a name="514" href="Issue2019.html#514" class="Function"
+      ><a name="various-whitespace-characters" href="Issue2019.html#various-whitespace-characters" class="Function"
       >various-whitespace-characters</a
       ><a name="543"
       > </a
@@ -121,12 +121,12 @@
       >:</a
       ><a name="545"
       > </a
-      ><a name="546" href="Agda.Builtin.String.html#165" class="Postulate"
+      ><a name="546" href="Agda.Builtin.String.html#String" class="Postulate"
       >String</a
       ><a name="552"
       >
 </a
-      ><a name="553" href="Issue2019.html#514" class="Function"
+      ><a name="553" href="Issue2019.html#various-whitespace-characters" class="Function"
       >various-whitespace-characters</a
       ><a name="582"
       > </a
