--- a/test/LaTeXAndHTML/succeed/Issue2077-1.html
+++ b/test/LaTeXAndHTML/succeed/Issue2077-1.html
@@ -24,7 +24,7 @@ Blip</a
       >postulate</a
       ><a name="99"
       > </a
-      ><a name="100" href="Issue2077-1.html#100" class="Postulate"
+      ><a name="A" href="Issue2077-1.html#A" class="Postulate"
       >A</a
       ><a name="101"
       > </a
