--- a/test/LaTeXAndHTML/succeed/Issue2077-2.html
+++ b/test/LaTeXAndHTML/succeed/Issue2077-2.html
@@ -24,7 +24,7 @@
       >postulate</a
       ><a name="95"
       > </a
-      ><a name="96" href="Issue2077-2.html#96" class="Postulate"
+      ><a name="A" href="Issue2077-2.html#A" class="Postulate"
       >A</a
       ><a name="97"
       > </a
