--- a/test/LaTeXAndHTML/succeed/Issue2588.html
+++ b/test/LaTeXAndHTML/succeed/Issue2588.html
@@ -24,7 +24,7 @@
       >module</a
       ><a name="82"
       > </a
-      ><a name="83" href="Issue2588.html#1" class="Module"
+      ><a name="83" href="Issue2588.html#Issue2588" class="Module"
       >Issue2588</a
       ><a name="92"
       > </a
