--- a/test/LaTeXAndHTML/succeed/Issue982.html
+++ b/test/LaTeXAndHTML/succeed/Issue982.html
@@ -54,7 +54,7 @@
       >record</a
       ><a name="1101"
       > </a
-      ><a name="1102" href="Issue982.html#1102" class="Record"
+      ><a name="Sigma" href="Issue982.html#Sigma" class="Record"
       >Sigma</a
       ><a name="1107"
       > </a
@@ -115,7 +115,7 @@
       >constructor</a
       ><a name="1157"
       > </a
-      ><a name="1158" href="Issue982.html#1158" class="InductiveConstructor Operator"
+      ><a name="Sigma._,_" href="Issue982.html#Sigma._,_" class="InductiveConstructor Operator"
       >_,_</a
       ><a name="1161"
       >
@@ -125,7 +125,7 @@
       ><a name="1169"
       >
     </a
-      ><a name="1174" href="Issue982.html#1174" class="Field"
+      ><a name="Sigma.proj&#8321;" href="Issue982.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
       ><a name="1179"
       > </a
@@ -138,7 +138,7 @@
       ><a name="1183"
       >
     </a
-      ><a name="1188" href="Issue982.html#1188" class="Field"
+      ><a name="Sigma.proj&#8322;" href="Issue982.html#Sigma.proj&#8322;" class="Field"
       >proj&#8322;</a
       ><a name="1193"
       > </a
@@ -150,7 +150,7 @@
       >B</a
       ><a name="1197"
       > </a
-      ><a name="1198" href="Issue982.html#1174" class="Field"
+      ><a name="1198" href="Issue982.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
       ><a name="1203"
       >
@@ -160,7 +160,7 @@
       >open</a
       ><a name="1209"
       > </a
-      ><a name="1210" href="Issue982.html#1102" class="Module"
+      ><a name="1210" href="Issue982.html#Sigma" class="Module"
       >Sigma</a
       ><a name="1215"
       > </a
@@ -176,7 +176,7 @@
       ><a name="1235"
       >\begin{code}
 </a
-      ><a name="1248" href="Issue982.html#1248" class="Function"
+      ><a name="uncurry" href="Issue982.html#uncurry" class="Function"
       >uncurry</a
       ><a name="1255"
       > </a
@@ -234,7 +234,7 @@
       >:</a
       ><a name="1286"
       > </a
-      ><a name="1287" href="Issue982.html#1102" class="Record"
+      ><a name="1287" href="Issue982.html#Sigma" class="Record"
       >Sigma</a
       ><a name="1292"
       > </a
@@ -315,7 +315,7 @@
       >x</a
       ><a name="1343"
       > </a
-      ><a name="1344" href="Issue982.html#1158" class="InductiveConstructor Operator"
+      ><a name="1344" href="Issue982.html#Sigma._,_" class="InductiveConstructor Operator"
       >,</a
       ><a name="1345"
       > </a
@@ -340,7 +340,7 @@
       >:</a
       ><a name="1367"
       > </a
-      ><a name="1368" href="Issue982.html#1102" class="Record"
+      ><a name="1368" href="Issue982.html#Sigma" class="Record"
       >Sigma</a
       ><a name="1373"
       > </a
@@ -369,7 +369,7 @@
       ><a name="1385"
       >
 </a
-      ><a name="1386" href="Issue982.html#1248" class="Function"
+      ><a name="1386" href="Issue982.html#uncurry" class="Function"
       >uncurry</a
       ><a name="1393"
       > </a
@@ -383,7 +383,7 @@
       >x</a
       ><a name="1398"
       > </a
-      ><a name="1399" href="Issue982.html#1158" class="InductiveConstructor Operator"
+      ><a name="1399" href="Issue982.html#Sigma._,_" class="InductiveConstructor Operator"
       >,</a
       ><a name="1400"
       > </a
