--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.html
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.html
@@ -25,7 +25,7 @@
       >module</a
       ><a name="93"
       > </a
-      ><a name="94" href="LaTeX-succeed.html#1" class="Module"
+      ><a name="94" href="LaTeX-succeed.html#LaTeX-succeed" class="Module"
       >LaTeX-succeed</a
       ><a name="107"
       > </a
@@ -46,7 +46,7 @@
       >data</a
       ><a name="145"
       > </a
-      ><a name="146" href="LaTeX-succeed.html#146" class="Datatype"
+      ><a name="Bool" href="LaTeX-succeed.html#Bool" class="Datatype"
       >Bool</a
       ><a name="150"
       > </a
@@ -63,7 +63,7 @@
       ><a name="162"
       >
   </a
-      ><a name="165" href="LaTeX-succeed.html#165" class="InductiveConstructor"
+      ><a name="Bool.true" href="LaTeX-succeed.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="169"
       >   </a
@@ -71,12 +71,12 @@
       >:</a
       ><a name="173"
       > </a
-      ><a name="174" href="LaTeX-succeed.html#146" class="Datatype"
+      ><a name="174" href="LaTeX-succeed.html#Bool" class="Datatype"
       >Bool</a
       ><a name="178"
       >
   </a
-      ><a name="181" href="LaTeX-succeed.html#181" class="InductiveConstructor"
+      ><a name="Bool.false" href="LaTeX-succeed.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="186"
       >  </a
@@ -84,13 +84,13 @@
       >:</a
       ><a name="189"
       > </a
-      ><a name="190" href="LaTeX-succeed.html#146" class="Datatype"
+      ><a name="190" href="LaTeX-succeed.html#Bool" class="Datatype"
       >Bool</a
       ><a name="194"
       >
 
 </a
-      ><a name="196" href="LaTeX-succeed.html#196" class="Function Operator"
+      ><a name="if_then_else_" href="LaTeX-succeed.html#if_then_else_" class="Function Operator"
       >if_then_else_</a
       ><a name="209"
       > </a
@@ -118,7 +118,7 @@
       >&#8594;</a
       ><a name="223"
       > </a
-      ><a name="224" href="LaTeX-succeed.html#146" class="Datatype"
+      ><a name="224" href="LaTeX-succeed.html#Bool" class="Datatype"
       >Bool</a
       ><a name="228"
       > </a
@@ -147,15 +147,15 @@
       ><a name="240"
       >
 </a
-      ><a name="241" href="LaTeX-succeed.html#196" class="Function Operator"
+      ><a name="241" href="LaTeX-succeed.html#if_then_else_" class="Function Operator"
       >if</a
       ><a name="243"
       > </a
-      ><a name="244" href="LaTeX-succeed.html#165" class="InductiveConstructor"
+      ><a name="244" href="LaTeX-succeed.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="248"
       >   </a
-      ><a name="251" href="LaTeX-succeed.html#196" class="Function Operator"
+      ><a name="251" href="LaTeX-succeed.html#if_then_else_" class="Function Operator"
       >then</a
       ><a name="255"
       > </a
@@ -163,7 +163,7 @@
       >t</a
       ><a name="257"
       > </a
-      ><a name="258" href="LaTeX-succeed.html#196" class="Function Operator"
+      ><a name="258" href="LaTeX-succeed.html#if_then_else_" class="Function Operator"
       >else</a
       ><a name="262"
       > </a
@@ -180,15 +180,15 @@
       ><a name="268"
       >
 </a
-      ><a name="269" href="LaTeX-succeed.html#196" class="Function Operator"
+      ><a name="269" href="LaTeX-succeed.html#if_then_else_" class="Function Operator"
       >if</a
       ><a name="271"
       > </a
-      ><a name="272" href="LaTeX-succeed.html#181" class="InductiveConstructor"
+      ><a name="272" href="LaTeX-succeed.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="277"
       >  </a
-      ><a name="279" href="LaTeX-succeed.html#196" class="Function Operator"
+      ><a name="279" href="LaTeX-succeed.html#if_then_else_" class="Function Operator"
       >then</a
       ><a name="283"
       > </a
@@ -196,7 +196,7 @@
       >t</a
       ><a name="285"
       > </a
-      ><a name="286" href="LaTeX-succeed.html#196" class="Function Operator"
+      ><a name="286" href="LaTeX-succeed.html#if_then_else_" class="Function Operator"
       >else</a
       ><a name="290"
       > </a
@@ -218,7 +218,7 @@
       >data</a
       ><a name="302"
       > </a
-      ><a name="303" href="LaTeX-succeed.html#303" class="Datatype"
+      ><a name="&#8469;" href="LaTeX-succeed.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="304"
       > </a
@@ -235,7 +235,7 @@
       ><a name="316"
       >
   </a
-      ><a name="319" href="LaTeX-succeed.html#319" class="InductiveConstructor"
+      ><a name="&#8469;.zero" href="LaTeX-succeed.html#&#8469;.zero" class="InductiveConstructor"
       >zero</a
       ><a name="323"
       >  </a
@@ -243,12 +243,12 @@
       >:</a
       ><a name="326"
       > </a
-      ><a name="327" href="LaTeX-succeed.html#303" class="Datatype"
+      ><a name="327" href="LaTeX-succeed.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="328"
       >
   </a
-      ><a name="331" href="LaTeX-succeed.html#331" class="InductiveConstructor"
+      ><a name="&#8469;.suc" href="LaTeX-succeed.html#&#8469;.suc" class="InductiveConstructor"
       >suc</a
       ><a name="334"
       >   </a
@@ -256,7 +256,7 @@
       >:</a
       ><a name="338"
       > </a
-      ><a name="339" href="LaTeX-succeed.html#303" class="Datatype"
+      ><a name="339" href="LaTeX-succeed.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="340"
       > </a
@@ -264,13 +264,13 @@
       >&#8594;</a
       ><a name="342"
       > </a
-      ><a name="343" href="LaTeX-succeed.html#303" class="Datatype"
+      ><a name="343" href="LaTeX-succeed.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="344"
       >
 
 </a
-      ><a name="346" href="LaTeX-succeed.html#346" class="Function Operator"
+      ><a name="_+_" href="LaTeX-succeed.html#_+_" class="Function Operator"
       >_+_</a
       ><a name="349"
       > </a
@@ -278,7 +278,7 @@
       >:</a
       ><a name="351"
       > </a
-      ><a name="352" href="LaTeX-succeed.html#303" class="Datatype"
+      ><a name="352" href="LaTeX-succeed.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="353"
       > </a
@@ -286,7 +286,7 @@
       >&#8594;</a
       ><a name="355"
       > </a
-      ><a name="356" href="LaTeX-succeed.html#303" class="Datatype"
+      ><a name="356" href="LaTeX-succeed.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="357"
       > </a
@@ -294,16 +294,16 @@
       >&#8594;</a
       ><a name="359"
       > </a
-      ><a name="360" href="LaTeX-succeed.html#303" class="Datatype"
+      ><a name="360" href="LaTeX-succeed.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="361"
       >
 </a
-      ><a name="362" href="LaTeX-succeed.html#319" class="InductiveConstructor"
+      ><a name="362" href="LaTeX-succeed.html#&#8469;.zero" class="InductiveConstructor"
       >zero</a
       ><a name="366"
       >             </a
-      ><a name="379" href="LaTeX-succeed.html#346" class="Function Operator"
+      ><a name="379" href="LaTeX-succeed.html#_+_" class="Function Operator"
       >+</a
       ><a name="380"
       > </a
@@ -320,7 +320,7 @@
       ><a name="386"
       >
 </a
-      ><a name="387" href="LaTeX-succeed.html#331" class="InductiveConstructor"
+      ><a name="387" href="LaTeX-succeed.html#&#8469;.suc" class="InductiveConstructor"
       >suc</a
       ><a name="390"
       > </a
@@ -332,7 +332,7 @@
       >{- ugh -}</a
       ><a name="402"
       >  </a
-      ><a name="404" href="LaTeX-succeed.html#346" class="Function Operator"
+      ><a name="404" href="LaTeX-succeed.html#_+_" class="Function Operator"
       >+</a
       ><a name="405"
       > </a
@@ -344,7 +344,7 @@
       >=</a
       ><a name="409"
       > </a
-      ><a name="410" href="LaTeX-succeed.html#331" class="InductiveConstructor"
+      ><a name="410" href="LaTeX-succeed.html#&#8469;.suc" class="InductiveConstructor"
       >suc</a
       ><a name="413"
       > </a
@@ -354,7 +354,7 @@
       >m</a
       ><a name="416"
       > </a
-      ><a name="417" href="LaTeX-succeed.html#346" class="Function Operator"
+      ><a name="417" href="LaTeX-succeed.html#_+_" class="Function Operator"
       >+</a
       ><a name="418"
       > </a
@@ -374,7 +374,7 @@
       >BUILTIN</a
       ><a name="434"
       > NATURAL </a
-      ><a name="443" href="LaTeX-succeed.html#303" class="Datatype"
+      ><a name="443" href="LaTeX-succeed.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="444"
       > </a
@@ -384,7 +384,7 @@
       >
 
 </a
-      ><a name="450" href="LaTeX-succeed.html#450" class="Function"
+      ><a name="alignment" href="LaTeX-succeed.html#alignment" class="Function"
       >alignment</a
       ><a name="459"
       > </a
@@ -414,7 +414,7 @@
       >:</a
       ><a name="472"
       > </a
-      ><a name="473" href="LaTeX-succeed.html#303" class="Datatype"
+      ><a name="473" href="LaTeX-succeed.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="474" class="Symbol"
       >)</a
@@ -424,12 +424,12 @@
       >&#8594;</a
       ><a name="477"
       > </a
-      ><a name="478" href="LaTeX-succeed.html#303" class="Datatype"
+      ><a name="478" href="LaTeX-succeed.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="479"
       >
 </a
-      ><a name="480" href="LaTeX-succeed.html#450" class="Function"
+      ><a name="480" href="LaTeX-succeed.html#alignment" class="Function"
       >alignment</a
       ><a name="489"
       >  </a
@@ -458,7 +458,7 @@
       ><a name="513"
       >
 </a
-      ><a name="514" href="LaTeX-succeed.html#450" class="Function"
+      ><a name="514" href="LaTeX-succeed.html#alignment" class="Function"
       >alignment</a
       ><a name="523"
       >     </a
@@ -487,7 +487,7 @@
       ><a name="544"
       >
 </a
-      ><a name="545" href="LaTeX-succeed.html#450" class="Function"
+      ><a name="545" href="LaTeX-succeed.html#alignment" class="Function"
       >alignment</a
       ><a name="554"
       >        </a
@@ -516,7 +516,7 @@
       ><a name="580"
       >
 </a
-      ><a name="581" href="LaTeX-succeed.html#450" class="CatchallClause Function"
+      ><a name="581" href="LaTeX-succeed.html#alignment" class="CatchallClause Function"
       >alignment</a
       ><a name="590" class="CatchallClause"
       >           </a
@@ -556,7 +556,7 @@
       >data</a
       ><a name="646"
       > </a
-      ><a name="647" href="LaTeX-succeed.html#647" class="Datatype"
+      ><a name="&#8869;" href="LaTeX-succeed.html#&#8869;" class="Datatype"
       >&#8869;</a
       ><a name="648"
       > </a
@@ -578,7 +578,7 @@
       >record</a
       ><a name="668"
       > </a
-      ><a name="669" href="LaTeX-succeed.html#669" class="Record"
+      ><a name="R" href="LaTeX-succeed.html#R" class="Record"
       >R</a
       ><a name="670"
       > </a
@@ -600,7 +600,7 @@
       ><a name="691"
       >
     </a
-      ><a name="696" href="LaTeX-succeed.html#696" class="Field"
+      ><a name="R.f" href="LaTeX-succeed.html#R.f" class="Field"
       >f</a
       ><a name="697"
       >  </a
@@ -613,7 +613,7 @@
       ><a name="704"
       >
     </a
-      ><a name="709" href="LaTeX-succeed.html#709" class="Field"
+      ><a name="R.g" href="LaTeX-succeed.html#R.g" class="Field"
       >g</a
       ><a name="710"
       >  </a
@@ -631,7 +631,7 @@
       >record</a
       ><a name="725"
       > </a
-      ><a name="726" href="LaTeX-succeed.html#726" class="Record"
+      ><a name="R&#8242;" href="LaTeX-succeed.html#R&#8242;" class="Record"
       >R&#8242;</a
       ><a name="728"
       > </a
@@ -673,7 +673,7 @@
       ><a name="761"
       >
     </a
-      ><a name="766" href="LaTeX-succeed.html#766" class="Field"
+      ><a name="R&#8242;.h" href="LaTeX-succeed.html#R&#8242;.h" class="Field"
       >h</a
       ><a name="767"
       >  </a
@@ -686,7 +686,7 @@
       ><a name="774"
       >
     </a
-      ><a name="779" href="LaTeX-succeed.html#779" class="Field"
+      ><a name="R&#8242;.j" href="LaTeX-succeed.html#R&#8242;.j" class="Field"
       >j</a
       ><a name="780"
       >  </a
@@ -699,7 +699,7 @@
       ><a name="787"
       >
     </a
-      ><a name="792" href="LaTeX-succeed.html#792" class="Field"
+      ><a name="R&#8242;.r" href="LaTeX-succeed.html#R&#8242;.r" class="Field"
       >r</a
       ><a name="793"
       >  </a
@@ -707,7 +707,7 @@
       >:</a
       ><a name="796"
       > </a
-      ><a name="797" href="LaTeX-succeed.html#669" class="Record"
+      ><a name="797" href="LaTeX-succeed.html#R" class="Record"
       >R</a
       ><a name="798"
       >
@@ -723,7 +723,7 @@
       >module</a
       ><a name="830"
       > </a
-      ><a name="831" href="LaTeX-succeed.html#831" class="Module"
+      ><a name="M" href="LaTeX-succeed.html#M" class="Module"
       >M</a
       ><a name="832"
       > </a
@@ -732,7 +732,7 @@
       ><a name="838"
       >
   </a
-      ><a name="841" href="LaTeX-succeed.html#841" class="Function"
+      ><a name="M.r&#8242;" href="LaTeX-succeed.html#M.r&#8242;" class="Function"
       >r&#8242;</a
       ><a name="843"
       > </a
@@ -768,7 +768,7 @@
       >&#8594;</a
       ><a name="861"
       > </a
-      ><a name="862" href="LaTeX-succeed.html#726" class="Record"
+      ><a name="862" href="LaTeX-succeed.html#R&#8242;" class="Record"
       >R&#8242;</a
       ><a name="864"
       > </a
@@ -781,7 +781,7 @@
       ><a name="868"
       >
   </a
-      ><a name="871" href="LaTeX-succeed.html#841" class="Function"
+      ><a name="871" href="LaTeX-succeed.html#M.r&#8242;" class="Function"
       >r&#8242;</a
       ><a name="873"
       > </a
@@ -806,7 +806,7 @@
       >=</a
       ><a name="893"
       > </a
-      ><a name="894" href="LaTeX-succeed.html#647" class="Datatype"
+      ><a name="894" href="LaTeX-succeed.html#&#8869;" class="Datatype"
       >&#8869;</a
       ><a name="895"
       >
@@ -823,7 +823,7 @@
       >=</a
       ><a name="906"
       > </a
-      ><a name="907" href="LaTeX-succeed.html#647" class="Datatype"
+      ><a name="907" href="LaTeX-succeed.html#&#8869;" class="Datatype"
       >&#8869;</a
       ><a name="908"
       >
@@ -857,7 +857,7 @@
       >=</a
       ><a name="940"
       > </a
-      ><a name="941" href="LaTeX-succeed.html#647" class="Datatype"
+      ><a name="941" href="LaTeX-succeed.html#&#8869;" class="Datatype"
       >&#8869;</a
       ><a name="942"
       >
@@ -874,7 +874,7 @@
       >=</a
       ><a name="957"
       > </a
-      ><a name="958" href="LaTeX-succeed.html#647" class="Datatype"
+      ><a name="958" href="LaTeX-succeed.html#&#8869;" class="Datatype"
       >&#8869;</a
       ><a name="959"
       >
