--- a/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.html
+++ b/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.html
@@ -28,7 +28,7 @@
       ><a name="184"
       >
   </a
-      ><a name="187" href="Legacy-AgdaIndent.html#187" class="Postulate"
+      ><a name="Whatever" href="Legacy-AgdaIndent.html#Whatever" class="Postulate"
       >Whatever</a
       ><a name="195"
       > </a
