--- a/test/LaTeXAndHTML/succeed/Links.html
+++ b/test/LaTeXAndHTML/succeed/Links.html
@@ -25,7 +25,7 @@
       >data</a
       ><a name="140"
       > </a
-      ><a name="141" href="Links.html#141" class="Datatype"
+      ><a name="&#8469;" href="Links.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="142"
       > </a
@@ -42,7 +42,7 @@
       ><a name="154"
       >
   </a
-      ><a name="157" href="Links.html#157" class="InductiveConstructor"
+      ><a name="&#8469;.zero" href="Links.html#&#8469;.zero" class="InductiveConstructor"
       >zero</a
       ><a name="161"
       >  </a
@@ -50,12 +50,12 @@
       >:</a
       ><a name="164"
       > </a
-      ><a name="165" href="Links.html#141" class="Datatype"
+      ><a name="165" href="Links.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="166"
       >
   </a
-      ><a name="169" href="Links.html#169" class="InductiveConstructor"
+      ><a name="&#8469;.suc" href="Links.html#&#8469;.suc" class="InductiveConstructor"
       >suc</a
       ><a name="172"
       >   </a
@@ -63,7 +63,7 @@
       >:</a
       ><a name="176"
       > </a
-      ><a name="177" href="Links.html#141" class="Datatype"
+      ><a name="177" href="Links.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="178"
       > </a
@@ -71,7 +71,7 @@
       >&#8594;</a
       ><a name="180"
       > </a
-      ><a name="181" href="Links.html#141" class="Datatype"
+      ><a name="181" href="Links.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="182"
       >
@@ -91,7 +91,7 @@ manually though; \hyperlink{two}{\AgdaDatatype{two}}.
       ><a name="434"
       >\begin{code}
 </a
-      ><a name="447" href="Links.html#447" class="Function"
+      ><a name="two" href="Links.html#two" class="Function"
       >two</a
       ><a name="450"
       > </a
@@ -99,12 +99,12 @@ manually though; \hyperlink{two}{\AgdaDatatype{two}}.
       >:</a
       ><a name="452"
       > </a
-      ><a name="453" href="Links.html#141" class="Datatype"
+      ><a name="453" href="Links.html#&#8469;" class="Datatype"
       >&#8469;</a
       ><a name="454"
       >
 </a
-      ><a name="455" href="Links.html#447" class="Function"
+      ><a name="455" href="Links.html#two" class="Function"
       >two</a
       ><a name="458"
       > </a
@@ -112,17 +112,17 @@ manually though; \hyperlink{two}{\AgdaDatatype{two}}.
       >=</a
       ><a name="460"
       > </a
-      ><a name="461" href="Links.html#169" class="InductiveConstructor"
+      ><a name="461" href="Links.html#&#8469;.suc" class="InductiveConstructor"
       >suc</a
       ><a name="464"
       > </a
       ><a name="465" class="Symbol"
       >(</a
-      ><a name="466" href="Links.html#169" class="InductiveConstructor"
+      ><a name="466" href="Links.html#&#8469;.suc" class="InductiveConstructor"
       >suc</a
       ><a name="469"
       > </a
-      ><a name="470" href="Links.html#157" class="InductiveConstructor"
+      ><a name="470" href="Links.html#&#8469;.zero" class="InductiveConstructor"
       >zero</a
       ><a name="474" class="Symbol"
       >)</a
@@ -149,7 +149,7 @@ works automatically.
       >data</a
       ><a name="767"
       > </a
-      ><a name="768" href="Links.html#768" class="Datatype"
+      ><a name="Bool" href="Links.html#Bool" class="Datatype"
       >Bool</a
       ><a name="772"
       > </a
@@ -166,11 +166,11 @@ works automatically.
       ><a name="784"
       >
   </a
-      ><a name="787" href="Links.html#787" class="InductiveConstructor"
+      ><a name="Bool.true" href="Links.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="791"
       > </a
-      ><a name="792" href="Links.html#792" class="InductiveConstructor"
+      ><a name="Bool.false" href="Links.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="797"
       > </a
@@ -178,7 +178,7 @@ works automatically.
       >:</a
       ><a name="799"
       > </a
-      ><a name="800" href="Links.html#768" class="Datatype"
+      ><a name="800" href="Links.html#Bool" class="Datatype"
       >Bool</a
       ><a name="804"
       >
@@ -194,7 +194,7 @@ to be specified as follows:
       ><a name="963"
       >\begin{code}
 </a
-      ><a name="976" href="Links.html#976" class="Function Operator"
+      ><a name="if_then_else_" href="Links.html#if_then_else_" class="Function Operator"
       >if_then_else_</a
       ><a name="989"
       > </a
@@ -222,7 +222,7 @@ to be specified as follows:
       >&#8594;</a
       ><a name="1003"
       > </a
-      ><a name="1004" href="Links.html#768" class="Datatype"
+      ><a name="1004" href="Links.html#Bool" class="Datatype"
       >Bool</a
       ><a name="1008"
       > </a
@@ -251,15 +251,15 @@ to be specified as follows:
       ><a name="1020"
       >
 </a
-      ><a name="1021" href="Links.html#976" class="Function Operator"
+      ><a name="1021" href="Links.html#if_then_else_" class="Function Operator"
       >if</a
       ><a name="1023"
       > </a
-      ><a name="1024" href="Links.html#787" class="InductiveConstructor"
+      ><a name="1024" href="Links.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="1028"
       > </a
-      ><a name="1029" href="Links.html#976" class="Function Operator"
+      ><a name="1029" href="Links.html#if_then_else_" class="Function Operator"
       >then</a
       ><a name="1033"
       > </a
@@ -267,7 +267,7 @@ to be specified as follows:
       >t</a
       ><a name="1035"
       > </a
-      ><a name="1036" href="Links.html#976" class="Function Operator"
+      ><a name="1036" href="Links.html#if_then_else_" class="Function Operator"
       >else</a
       ><a name="1040"
       > </a
@@ -284,15 +284,15 @@ to be specified as follows:
       ><a name="1046"
       >
 </a
-      ><a name="1047" href="Links.html#976" class="Function Operator"
+      ><a name="1047" href="Links.html#if_then_else_" class="Function Operator"
       >if</a
       ><a name="1049"
       > </a
-      ><a name="1050" href="Links.html#792" class="InductiveConstructor"
+      ><a name="1050" href="Links.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="1055"
       > </a
-      ><a name="1056" href="Links.html#976" class="Function Operator"
+      ><a name="1056" href="Links.html#if_then_else_" class="Function Operator"
       >then</a
       ><a name="1060"
       > </a
@@ -300,7 +300,7 @@ to be specified as follows:
       >t</a
       ><a name="1062"
       > </a
-      ><a name="1063" href="Links.html#976" class="Function Operator"
+      ><a name="1063" href="Links.html#if_then_else_" class="Function Operator"
       >else</a
       ><a name="1067"
       > </a
