--- a/test/LaTeXAndHTML/succeed/MdMultiLanguage.html
+++ b/test/LaTeXAndHTML/succeed/MdMultiLanguage.html
@@ -19,7 +19,7 @@
       >module</a
       ><a name="16"
       > </a
-      ><a name="17" href="MdMultiLanguage.html#1" class="Module"
+      ><a name="17" href="MdMultiLanguage.html#MdMultiLanguage" class="Module"
       >MdMultiLanguage</a
       ><a name="32"
       > </a
@@ -45,7 +45,7 @@ a = True
       >data</a
       ><a name="98"
       > </a
-      ><a name="99" href="MdMultiLanguage.html#99" class="Datatype"
+      ><a name="Bool" href="MdMultiLanguage.html#Bool" class="Datatype"
       >Bool</a
       ><a name="103"
       > </a
@@ -62,7 +62,7 @@ a = True
       ><a name="115"
       >
     </a
-      ><a name="120" href="MdMultiLanguage.html#120" class="InductiveConstructor"
+      ><a name="Bool.true" href="MdMultiLanguage.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="124"
       > </a
@@ -70,12 +70,12 @@ a = True
       >:</a
       ><a name="126"
       > </a
-      ><a name="127" href="MdMultiLanguage.html#99" class="Datatype"
+      ><a name="127" href="MdMultiLanguage.html#Bool" class="Datatype"
       >Bool</a
       ><a name="131"
       >
     </a
-      ><a name="136" href="MdMultiLanguage.html#136" class="InductiveConstructor"
+      ><a name="Bool.false" href="MdMultiLanguage.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="141"
       > </a
@@ -83,12 +83,12 @@ a = True
       >:</a
       ><a name="143"
       > </a
-      ><a name="144" href="MdMultiLanguage.html#99" class="Datatype"
+      ><a name="144" href="MdMultiLanguage.html#Bool" class="Datatype"
       >Bool</a
       ><a name="148"
       >
     </a
-      ><a name="153" href="MdMultiLanguage.html#153" class="InductiveConstructor"
+      ><a name="Bool.aa" href="MdMultiLanguage.html#Bool.aa" class="InductiveConstructor"
       >aa</a
       ><a name="155"
       > </a
@@ -100,13 +100,13 @@ a = True
       >{- ``` -}</a
       ><a name="167"
       > </a
-      ><a name="168" href="MdMultiLanguage.html#99" class="Datatype"
+      ><a name="168" href="MdMultiLanguage.html#Bool" class="Datatype"
       >Bool</a
       ><a name="172"
       >
 
 </a
-      ><a name="174" href="MdMultiLanguage.html#174" class="Function"
+      ><a name="a" href="MdMultiLanguage.html#a" class="Function"
       >a</a
       ><a name="175"
       > </a
@@ -114,12 +114,12 @@ a = True
       >:</a
       ><a name="177"
       > </a
-      ><a name="178" href="MdMultiLanguage.html#99" class="Datatype"
+      ><a name="178" href="MdMultiLanguage.html#Bool" class="Datatype"
       >Bool</a
       ><a name="182"
       >
 </a
-      ><a name="183" href="MdMultiLanguage.html#174" class="Function"
+      ><a name="183" href="MdMultiLanguage.html#a" class="Function"
       >a</a
       ><a name="184"
       > </a
@@ -127,7 +127,7 @@ a = True
       >=</a
       ><a name="186"
       > </a
-      ><a name="187" href="MdMultiLanguage.html#120" class="InductiveConstructor"
+      ><a name="187" href="MdMultiLanguage.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="191"
       >
@@ -146,7 +146,7 @@ This is also parsed:
       >module</a
       ><a name="236"
       > </a
-      ><a name="237" href="MdMultiLanguage.html#237" class="Module"
+      ><a name="MdQuotedDelim" href="MdMultiLanguage.html#MdQuotedDelim" class="Module"
       >MdQuotedDelim</a
       ><a name="250"
       > </a
@@ -160,7 +160,7 @@ This is also parsed:
       >data</a
       ><a name="270"
       > </a
-      ><a name="271" href="MdMultiLanguage.html#271" class="Datatype"
+      ><a name="MdQuotedDelim.Bool&#8217;" href="MdMultiLanguage.html#MdQuotedDelim.Bool&#8217;" class="Datatype"
       >Bool&#8217;</a
       ><a name="276"
       > </a
@@ -177,7 +177,7 @@ This is also parsed:
       ><a name="288"
       >
             </a
-      ><a name="301" href="MdMultiLanguage.html#301" class="InductiveConstructor"
+      ><a name="MdQuotedDelim.Bool&#8217;.true" href="MdMultiLanguage.html#MdQuotedDelim.Bool&#8217;.true" class="InductiveConstructor"
       >true</a
       ><a name="305"
       > </a
@@ -185,12 +185,12 @@ This is also parsed:
       >:</a
       ><a name="307"
       > </a
-      ><a name="308" href="MdMultiLanguage.html#271" class="Datatype"
+      ><a name="308" href="MdMultiLanguage.html#MdQuotedDelim.Bool&#8217;" class="Datatype"
       >Bool&#8217;</a
       ><a name="313"
       >
             </a
-      ><a name="326" href="MdMultiLanguage.html#326" class="InductiveConstructor"
+      ><a name="MdQuotedDelim.Bool&#8217;.false" href="MdMultiLanguage.html#MdQuotedDelim.Bool&#8217;.false" class="InductiveConstructor"
       >false</a
       ><a name="331"
       > </a
@@ -198,12 +198,12 @@ This is also parsed:
       >:</a
       ><a name="333"
       > </a
-      ><a name="334" href="MdMultiLanguage.html#271" class="Datatype"
+      ><a name="334" href="MdMultiLanguage.html#MdQuotedDelim.Bool&#8217;" class="Datatype"
       >Bool&#8217;</a
       ><a name="339"
       >
             </a
-      ><a name="352" href="MdMultiLanguage.html#352" class="InductiveConstructor"
+      ><a name="MdQuotedDelim.Bool&#8217;.aa" href="MdMultiLanguage.html#MdQuotedDelim.Bool&#8217;.aa" class="InductiveConstructor"
       >aa</a
       ><a name="354"
       > </a
@@ -215,13 +215,13 @@ This is also parsed:
       >{- ``` -}</a
       ><a name="366"
       > </a
-      ><a name="367" href="MdMultiLanguage.html#271" class="Datatype"
+      ><a name="367" href="MdMultiLanguage.html#MdQuotedDelim.Bool&#8217;" class="Datatype"
       >Bool&#8217;</a
       ><a name="372"
       >
 
         </a
-      ><a name="382" href="MdMultiLanguage.html#382" class="Function"
+      ><a name="MdQuotedDelim.a&#8217;" href="MdMultiLanguage.html#MdQuotedDelim.a&#8217;" class="Function"
       >a&#8217;</a
       ><a name="384"
       > </a
@@ -229,12 +229,12 @@ This is also parsed:
       >:</a
       ><a name="386"
       > </a
-      ><a name="387" href="MdMultiLanguage.html#271" class="Datatype"
+      ><a name="387" href="MdMultiLanguage.html#MdQuotedDelim.Bool&#8217;" class="Datatype"
       >Bool&#8217;</a
       ><a name="392"
       >
         </a
-      ><a name="401" href="MdMultiLanguage.html#382" class="Function"
+      ><a name="401" href="MdMultiLanguage.html#MdQuotedDelim.a&#8217;" class="Function"
       >a&#8217;</a
       ><a name="403"
       > </a
@@ -242,7 +242,7 @@ This is also parsed:
       >=</a
       ><a name="405"
       > </a
-      ><a name="406" href="MdMultiLanguage.html#352" class="InductiveConstructor"
+      ><a name="406" href="MdMultiLanguage.html#MdQuotedDelim.Bool&#8217;.aa" class="InductiveConstructor"
       >aa</a
       ><a name="408"
       >
@@ -262,7 +262,7 @@ This is also parsed:
       ><a name="486"
       >```
 </a
-      ><a name="490" href="MdMultiLanguage.html#490" class="Function"
+      ><a name="b" href="MdMultiLanguage.html#b" class="Function"
       >b</a
       ><a name="491"
       > </a
@@ -270,12 +270,12 @@ This is also parsed:
       >:</a
       ><a name="493"
       > </a
-      ><a name="494" href="MdMultiLanguage.html#99" class="Datatype"
+      ><a name="494" href="MdMultiLanguage.html#Bool" class="Datatype"
       >Bool</a
       ><a name="498"
       >
 </a
-      ><a name="499" href="MdMultiLanguage.html#490" class="Function"
+      ><a name="499" href="MdMultiLanguage.html#b" class="Function"
       >b</a
       ><a name="500"
       > </a
@@ -283,7 +283,7 @@ This is also parsed:
       >=</a
       ><a name="502"
       > </a
-      ><a name="503" href="MdMultiLanguage.html#136" class="InductiveConstructor"
+      ><a name="503" href="MdMultiLanguage.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="508"
       >
