--- a/test/LaTeXAndHTML/succeed/MdQuotedDelim.html
+++ b/test/LaTeXAndHTML/succeed/MdQuotedDelim.html
@@ -16,7 +16,7 @@
       >module</a
       ><a name="13"
       > </a
-      ><a name="14" href="MdQuotedDelim.html#1" class="Module"
+      ><a name="14" href="MdQuotedDelim.html#MdQuotedDelim" class="Module"
       >MdQuotedDelim</a
       ><a name="27"
       > </a
@@ -30,7 +30,7 @@
       >data</a
       ><a name="47"
       > </a
-      ><a name="48" href="MdQuotedDelim.html#48" class="Datatype"
+      ><a name="Bool" href="MdQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
       ><a name="52"
       > </a
@@ -47,7 +47,7 @@
       ><a name="64"
       >
             </a
-      ><a name="77" href="MdQuotedDelim.html#77" class="InductiveConstructor"
+      ><a name="Bool.true" href="MdQuotedDelim.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="81"
       > </a
@@ -55,12 +55,12 @@
       >:</a
       ><a name="83"
       > </a
-      ><a name="84" href="MdQuotedDelim.html#48" class="Datatype"
+      ><a name="84" href="MdQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
       ><a name="88"
       >
             </a
-      ><a name="101" href="MdQuotedDelim.html#101" class="InductiveConstructor"
+      ><a name="Bool.false" href="MdQuotedDelim.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="106"
       > </a
@@ -68,12 +68,12 @@
       >:</a
       ><a name="108"
       > </a
-      ><a name="109" href="MdQuotedDelim.html#48" class="Datatype"
+      ><a name="109" href="MdQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
       ><a name="113"
       >
             </a
-      ><a name="126" href="MdQuotedDelim.html#126" class="InductiveConstructor"
+      ><a name="Bool.aa" href="MdQuotedDelim.html#Bool.aa" class="InductiveConstructor"
       >aa</a
       ><a name="128"
       > </a
@@ -85,13 +85,13 @@
       >{- ``` -}</a
       ><a name="140"
       > </a
-      ><a name="141" href="MdQuotedDelim.html#48" class="Datatype"
+      ><a name="141" href="MdQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
       ><a name="145"
       >
 
         </a
-      ><a name="155" href="MdQuotedDelim.html#155" class="Function"
+      ><a name="a" href="MdQuotedDelim.html#a" class="Function"
       >a</a
       ><a name="156"
       > </a
@@ -99,12 +99,12 @@
       >:</a
       ><a name="158"
       > </a
-      ><a name="159" href="MdQuotedDelim.html#48" class="Datatype"
+      ><a name="159" href="MdQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
       ><a name="163"
       >
         </a
-      ><a name="172" href="MdQuotedDelim.html#155" class="Function"
+      ><a name="172" href="MdQuotedDelim.html#a" class="Function"
       >a</a
       ><a name="173"
       > </a
@@ -112,7 +112,7 @@
       >=</a
       ><a name="175"
       > </a
-      ><a name="176" href="MdQuotedDelim.html#77" class="InductiveConstructor"
+      ><a name="176" href="MdQuotedDelim.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="180"
       >
