--- a/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
+++ b/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
@@ -24,7 +24,7 @@
       >module</a
       ><a name="82"
       > </a
-      ><a name="83" href="NoNewLinesVsNewLines.html#1" class="Module"
+      ><a name="83" href="NoNewLinesVsNewLines.html#NoNewLinesVsNewLines" class="Module"
       >NoNewLinesVsNewLines</a
       ><a name="103"
       > </a
@@ -45,7 +45,7 @@
       >module</a
       ><a name="142"
       > </a
-      ><a name="143" href="NoNewLinesVsNewLines.html#143" class="Module"
+      ><a name="Test2" href="NoNewLinesVsNewLines.html#Test2" class="Module"
       >Test2</a
       ><a name="148"
       > </a
