--- a/test/LaTeXAndHTML/succeed/OneSpaceIndent.html
+++ b/test/LaTeXAndHTML/succeed/OneSpaceIndent.html
@@ -24,7 +24,7 @@
       >module</a
       ><a name="92"
       > </a
-      ><a name="93" href="OneSpaceIndent.html#1" class="Module"
+      ><a name="93" href="OneSpaceIndent.html#OneSpaceIndent" class="Module"
       >OneSpaceIndent</a
       ><a name="107"
       > </a
@@ -49,7 +49,7 @@ Text1
       >module</a
       ><a name="182"
       > </a
-      ><a name="183" href="OneSpaceIndent.html#183" class="Module"
+      ><a name="Defs" href="OneSpaceIndent.html#Defs" class="Module"
       >Defs</a
       ><a name="187"
       > </a
@@ -74,7 +74,7 @@ Text2
       ><a name="227"
       >\begin{code}
   </a
-      ><a name="242" href="OneSpaceIndent.html#242" class="Postulate"
+      ><a name="Defs.Base" href="OneSpaceIndent.html#Defs.Base" class="Postulate"
       >Base</a
       ><a name="246"
       > </a
