--- a/test/LaTeXAndHTML/succeed/PatternSynonyms.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms.html
@@ -22,7 +22,7 @@
       >data</a
       ><a name="78"
       > </a
-      ><a name="79" href="PatternSynonyms.html#79" class="Datatype"
+      ><a name="Nat" href="PatternSynonyms.html#Nat" class="Datatype"
       >Nat</a
       ><a name="82"
       > </a
@@ -39,7 +39,7 @@
       ><a name="94"
       >
   </a
-      ><a name="97" href="PatternSynonyms.html#97" class="InductiveConstructor"
+      ><a name="Nat.zero" href="PatternSynonyms.html#Nat.zero" class="InductiveConstructor"
       >zero</a
       ><a name="101"
       > </a
@@ -47,12 +47,12 @@
       >:</a
       ><a name="103"
       > </a
-      ><a name="104" href="PatternSynonyms.html#79" class="Datatype"
+      ><a name="104" href="PatternSynonyms.html#Nat" class="Datatype"
       >Nat</a
       ><a name="107"
       >
   </a
-      ><a name="110" href="PatternSynonyms.html#110" class="InductiveConstructor"
+      ><a name="Nat.suc" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="113"
       > </a
@@ -60,7 +60,7 @@
       >:</a
       ><a name="115"
       > </a
-      ><a name="116" href="PatternSynonyms.html#79" class="Datatype"
+      ><a name="116" href="PatternSynonyms.html#Nat" class="Datatype"
       >Nat</a
       ><a name="119"
       > </a
@@ -68,7 +68,7 @@
       >&#8594;</a
       ><a name="121"
       > </a
-      ><a name="122" href="PatternSynonyms.html#79" class="Datatype"
+      ><a name="122" href="PatternSynonyms.html#Nat" class="Datatype"
       >Nat</a
       ><a name="125"
       >
@@ -78,7 +78,7 @@
       >pattern</a
       ><a name="134"
       > </a
-      ><a name="135" href="PatternSynonyms.html#135" class="InductiveConstructor"
+      ><a name="two" href="PatternSynonyms.html#two" class="InductiveConstructor"
       >two</a
       ><a name="138"
       >   </a
@@ -86,17 +86,17 @@
       >=</a
       ><a name="142"
       > </a
-      ><a name="143" href="PatternSynonyms.html#110" class="InductiveConstructor"
+      ><a name="143" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="146"
       > </a
       ><a name="147" class="Symbol"
       >(</a
-      ><a name="148" href="PatternSynonyms.html#110" class="InductiveConstructor"
+      ><a name="148" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="151"
       > </a
-      ><a name="152" href="PatternSynonyms.html#97" class="InductiveConstructor"
+      ><a name="152" href="PatternSynonyms.html#Nat.zero" class="InductiveConstructor"
       >zero</a
       ><a name="156" class="Symbol"
       >)</a
@@ -107,7 +107,7 @@
       >pattern</a
       ><a name="165"
       > </a
-      ><a name="166" href="PatternSynonyms.html#166" class="InductiveConstructor"
+      ><a name="three" href="PatternSynonyms.html#three" class="InductiveConstructor"
       >three</a
       ><a name="171"
       > </a
@@ -115,11 +115,11 @@
       >=</a
       ><a name="173"
       > </a
-      ><a name="174" href="PatternSynonyms.html#110" class="InductiveConstructor"
+      ><a name="174" href="PatternSynonyms.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="177"
       > </a
-      ><a name="178" href="PatternSynonyms.html#135" class="InductiveConstructor"
+      ><a name="178" href="PatternSynonyms.html#two" class="InductiveConstructor"
       >two</a
       ><a name="181"
       >
@@ -129,7 +129,7 @@
       >data</a
       ><a name="187"
       > </a
-      ><a name="188" href="PatternSynonyms.html#188" class="Datatype"
+      ><a name="Bot" href="PatternSynonyms.html#Bot" class="Datatype"
       >Bot</a
       ><a name="191"
       > </a
