--- a/test/LaTeXAndHTML/succeed/PatternSynonyms2.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms2.html
@@ -22,7 +22,7 @@
       >data</a
       ><a name="78"
       > </a
-      ><a name="79" href="PatternSynonyms2.html#79" class="Datatype"
+      ><a name="Nat" href="PatternSynonyms2.html#Nat" class="Datatype"
       >Nat</a
       ><a name="82"
       > </a
@@ -39,7 +39,7 @@
       ><a name="94"
       >
   </a
-      ><a name="97" href="PatternSynonyms2.html#97" class="InductiveConstructor"
+      ><a name="Nat.zero" href="PatternSynonyms2.html#Nat.zero" class="InductiveConstructor"
       >zero</a
       ><a name="101"
       > </a
@@ -47,12 +47,12 @@
       >:</a
       ><a name="103"
       > </a
-      ><a name="104" href="PatternSynonyms2.html#79" class="Datatype"
+      ><a name="104" href="PatternSynonyms2.html#Nat" class="Datatype"
       >Nat</a
       ><a name="107"
       >
   </a
-      ><a name="110" href="PatternSynonyms2.html#110" class="InductiveConstructor"
+      ><a name="Nat.suc" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="113"
       > </a
@@ -60,7 +60,7 @@
       >:</a
       ><a name="115"
       > </a
-      ><a name="116" href="PatternSynonyms2.html#79" class="Datatype"
+      ><a name="116" href="PatternSynonyms2.html#Nat" class="Datatype"
       >Nat</a
       ><a name="119"
       > </a
@@ -68,7 +68,7 @@
       >&#8594;</a
       ><a name="121"
       > </a
-      ><a name="122" href="PatternSynonyms2.html#79" class="Datatype"
+      ><a name="122" href="PatternSynonyms2.html#Nat" class="Datatype"
       >Nat</a
       ><a name="125"
       >
@@ -92,7 +92,7 @@
       >pattern</a
       ><a name="152"
       > </a
-      ><a name="153" href="PatternSynonyms2.html#153" class="InductiveConstructor"
+      ><a name="two" href="PatternSynonyms2.html#two" class="InductiveConstructor"
       >two</a
       ><a name="156"
       >   </a
@@ -100,17 +100,17 @@
       >=</a
       ><a name="160"
       > </a
-      ><a name="161" href="PatternSynonyms2.html#110" class="InductiveConstructor"
+      ><a name="161" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="164"
       > </a
       ><a name="165" class="Symbol"
       >(</a
-      ><a name="166" href="PatternSynonyms2.html#110" class="InductiveConstructor"
+      ><a name="166" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="169"
       > </a
-      ><a name="170" href="PatternSynonyms2.html#97" class="InductiveConstructor"
+      ><a name="170" href="PatternSynonyms2.html#Nat.zero" class="InductiveConstructor"
       >zero</a
       ><a name="174" class="Symbol"
       >)</a
@@ -121,7 +121,7 @@
       >pattern</a
       ><a name="185"
       > </a
-      ><a name="186" href="PatternSynonyms2.html#186" class="InductiveConstructor"
+      ><a name="three" href="PatternSynonyms2.html#three" class="InductiveConstructor"
       >three</a
       ><a name="191"
       > </a
@@ -129,11 +129,11 @@
       >=</a
       ><a name="193"
       > </a
-      ><a name="194" href="PatternSynonyms2.html#110" class="InductiveConstructor"
+      ><a name="194" href="PatternSynonyms2.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="197"
       > </a
-      ><a name="198" href="PatternSynonyms2.html#153" class="InductiveConstructor"
+      ><a name="198" href="PatternSynonyms2.html#two" class="InductiveConstructor"
       >two</a
       ><a name="201"
       >
@@ -143,7 +143,7 @@
       >data</a
       ><a name="207"
       > </a
-      ><a name="208" href="PatternSynonyms2.html#208" class="Datatype"
+      ><a name="Bot" href="PatternSynonyms2.html#Bot" class="Datatype"
       >Bot</a
       ><a name="211"
       > </a
