--- a/test/LaTeXAndHTML/succeed/PatternSynonyms3.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms3.html
@@ -22,7 +22,7 @@
       >data</a
       ><a name="78"
       > </a
-      ><a name="79" href="PatternSynonyms3.html#79" class="Datatype"
+      ><a name="Nat" href="PatternSynonyms3.html#Nat" class="Datatype"
       >Nat</a
       ><a name="82"
       > </a
@@ -39,7 +39,7 @@
       ><a name="94"
       >
   </a
-      ><a name="97" href="PatternSynonyms3.html#97" class="InductiveConstructor"
+      ><a name="Nat.zero" href="PatternSynonyms3.html#Nat.zero" class="InductiveConstructor"
       >zero</a
       ><a name="101"
       > </a
@@ -47,12 +47,12 @@
       >:</a
       ><a name="103"
       > </a
-      ><a name="104" href="PatternSynonyms3.html#79" class="Datatype"
+      ><a name="104" href="PatternSynonyms3.html#Nat" class="Datatype"
       >Nat</a
       ><a name="107"
       >
   </a
-      ><a name="110" href="PatternSynonyms3.html#110" class="InductiveConstructor"
+      ><a name="Nat.suc" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="113"
       > </a
@@ -60,7 +60,7 @@
       >:</a
       ><a name="115"
       > </a
-      ><a name="116" href="PatternSynonyms3.html#79" class="Datatype"
+      ><a name="116" href="PatternSynonyms3.html#Nat" class="Datatype"
       >Nat</a
       ><a name="119"
       > </a
@@ -68,7 +68,7 @@
       >&#8594;</a
       ><a name="121"
       > </a
-      ><a name="122" href="PatternSynonyms3.html#79" class="Datatype"
+      ><a name="122" href="PatternSynonyms3.html#Nat" class="Datatype"
       >Nat</a
       ><a name="125"
       >
@@ -78,7 +78,7 @@
       >pattern</a
       ><a name="134"
       > </a
-      ><a name="135" href="PatternSynonyms3.html#135" class="InductiveConstructor"
+      ><a name="two" href="PatternSynonyms3.html#two" class="InductiveConstructor"
       >two</a
       ><a name="138"
       >   </a
@@ -86,17 +86,17 @@
       >=</a
       ><a name="142"
       > </a
-      ><a name="143" href="PatternSynonyms3.html#110" class="InductiveConstructor"
+      ><a name="143" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="146"
       > </a
       ><a name="147" class="Symbol"
       >(</a
-      ><a name="148" href="PatternSynonyms3.html#110" class="InductiveConstructor"
+      ><a name="148" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="151"
       > </a
-      ><a name="152" href="PatternSynonyms3.html#97" class="InductiveConstructor"
+      ><a name="152" href="PatternSynonyms3.html#Nat.zero" class="InductiveConstructor"
       >zero</a
       ><a name="156" class="Symbol"
       >)</a
@@ -107,7 +107,7 @@
       >pattern</a
       ><a name="165"
       > </a
-      ><a name="166" href="PatternSynonyms3.html#166" class="InductiveConstructor"
+      ><a name="three" href="PatternSynonyms3.html#three" class="InductiveConstructor"
       >three</a
       ><a name="171"
       > </a
@@ -115,11 +115,11 @@
       >=</a
       ><a name="173"
       > </a
-      ><a name="174" href="PatternSynonyms3.html#110" class="InductiveConstructor"
+      ><a name="174" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="177"
       > </a
-      ><a name="178" href="PatternSynonyms3.html#135" class="InductiveConstructor"
+      ><a name="178" href="PatternSynonyms3.html#two" class="InductiveConstructor"
       >two</a
       ><a name="181"
       >
@@ -128,7 +128,7 @@
       >pattern</a
       ><a name="189"
       > </a
-      ><a name="190" href="PatternSynonyms3.html#190" class="InductiveConstructor"
+      ><a name="four" href="PatternSynonyms3.html#four" class="InductiveConstructor"
       >four</a
       ><a name="194"
       >  </a
@@ -136,11 +136,11 @@
       >=</a
       ><a name="197"
       > </a
-      ><a name="198" href="PatternSynonyms3.html#110" class="InductiveConstructor"
+      ><a name="198" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="201"
       > </a
-      ><a name="202" href="PatternSynonyms3.html#166" class="InductiveConstructor"
+      ><a name="202" href="PatternSynonyms3.html#three" class="InductiveConstructor"
       >three</a
       ><a name="207"
       >
@@ -150,7 +150,7 @@
       >pattern</a
       ><a name="216"
       > </a
-      ><a name="217" href="PatternSynonyms3.html#217" class="InductiveConstructor"
+      ><a name="five" href="PatternSynonyms3.html#five" class="InductiveConstructor"
       >five</a
       ><a name="221"
       >  </a
@@ -158,11 +158,11 @@
       >=</a
       ><a name="224"
       > </a
-      ><a name="225" href="PatternSynonyms3.html#110" class="InductiveConstructor"
+      ><a name="225" href="PatternSynonyms3.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="228"
       > </a
-      ><a name="229" href="PatternSynonyms3.html#190" class="InductiveConstructor"
+      ><a name="229" href="PatternSynonyms3.html#four" class="InductiveConstructor"
       >four</a
       ><a name="233"
       >
@@ -172,7 +172,7 @@
       >data</a
       ><a name="239"
       > </a
-      ><a name="240" href="PatternSynonyms3.html#240" class="Datatype"
+      ><a name="Bot" href="PatternSynonyms3.html#Bot" class="Datatype"
       >Bot</a
       ><a name="243"
       > </a
