--- a/test/LaTeXAndHTML/succeed/QuickLaTeX.html
+++ b/test/LaTeXAndHTML/succeed/QuickLaTeX.html
@@ -28,7 +28,7 @@
       >BUILTIN</a
       ><a name="87"
       > SIZE </a
-      ><a name="93" href="QuickLaTeX.html#93" class="Postulate"
+      ><a name="Size" href="QuickLaTeX.html#Size" class="Postulate"
       >Size</a
       ><a name="97"
       > </a
@@ -42,7 +42,7 @@
       >record</a
       ><a name="109"
       > </a
-      ><a name="110" href="QuickLaTeX.html#110" class="Record"
+      ><a name="Sigma" href="QuickLaTeX.html#Sigma" class="Record"
       >Sigma</a
       ><a name="115"
       > </a
@@ -108,7 +108,7 @@
       >constructor</a
       ><a name="179"
       > </a
-      ><a name="180" href="QuickLaTeX.html#180" class="CoinductiveConstructor"
+      ><a name="Sigma.c" href="QuickLaTeX.html#Sigma.c" class="CoinductiveConstructor"
       >c</a
       ><a name="181"
       >
@@ -118,7 +118,7 @@
       ><a name="189"
       >
     </a
-      ><a name="194" href="QuickLaTeX.html#194" class="Field"
+      ><a name="Sigma.proj&#8321;" href="QuickLaTeX.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
       ><a name="199"
       > </a
@@ -131,7 +131,7 @@
       ><a name="203"
       >
     </a
-      ><a name="208" href="QuickLaTeX.html#208" class="Field"
+      ><a name="Sigma.proj&#8322;" href="QuickLaTeX.html#Sigma.proj&#8322;" class="Field"
       >proj&#8322;</a
       ><a name="213"
       > </a
@@ -143,7 +143,7 @@
       >B</a
       ><a name="217"
       > </a
-      ><a name="218" href="QuickLaTeX.html#194" class="Field"
+      ><a name="218" href="QuickLaTeX.html#Sigma.proj&#8321;" class="Field"
       >proj&#8321;</a
       ><a name="223"
       >
@@ -153,7 +153,7 @@
       >data</a
       ><a name="229"
       > </a
-      ><a name="230" href="QuickLaTeX.html#230" class="Datatype"
+      ><a name="D" href="QuickLaTeX.html#D" class="Datatype"
       >D</a
       ><a name="231"
       > </a
@@ -170,7 +170,7 @@
       ><a name="243"
       >
   </a
-      ><a name="246" href="QuickLaTeX.html#246" class="InductiveConstructor"
+      ><a name="D.c" href="QuickLaTeX.html#D.c" class="InductiveConstructor"
       >c</a
       ><a name="247"
       > </a
@@ -178,13 +178,13 @@
       >:</a
       ><a name="249"
       > </a
-      ><a name="250" href="QuickLaTeX.html#230" class="Datatype"
+      ><a name="250" href="QuickLaTeX.html#D" class="Datatype"
       >D</a
       ><a name="251"
       >
 
 </a
-      ><a name="253" href="QuickLaTeX.html#253" class="Function"
+      ><a name="f" href="QuickLaTeX.html#f" class="Function"
       >f</a
       ><a name="254"
       > </a
@@ -264,7 +264,7 @@
       >&#8594;</a
       ><a name="296"
       > </a
-      ><a name="297" href="QuickLaTeX.html#110" class="Record"
+      ><a name="297" href="QuickLaTeX.html#Sigma" class="Record"
       >Sigma</a
       ><a name="302"
       > </a
@@ -277,7 +277,7 @@
       ><a name="306"
       >
 </a
-      ><a name="307" href="QuickLaTeX.html#253" class="Function"
+      ><a name="307" href="QuickLaTeX.html#f" class="Function"
       >f</a
       ><a name="308"
       > </a
@@ -285,7 +285,7 @@
       >=</a
       ><a name="310"
       > </a
-      ><a name="311" href="QuickLaTeX.html#180" class="CoinductiveConstructor"
+      ><a name="311" href="QuickLaTeX.html#Sigma.c" class="CoinductiveConstructor"
       >c</a
       ><a name="312"
       >
