--- a/test/LaTeXAndHTML/succeed/Relative-indentation.html
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.html
@@ -25,16 +25,16 @@
       ><a name="85"
       >
   </a
-      ><a name="88" href="Relative-indentation.html#88" class="Postulate"
+      ><a name="A" href="Relative-indentation.html#A" class="Postulate"
       >A</a
       ><a name="89"
       >  </a
-      ><a name="91" href="Relative-indentation.html#91" class="Postulate"
+      ><a name="B" href="Relative-indentation.html#B" class="Postulate"
       >B</a
       ><a name="92"
       >
       </a
-      ><a name="99" href="Relative-indentation.html#99" class="Postulate"
+      ><a name="C" href="Relative-indentation.html#C" class="Postulate"
       >C</a
       ><a name="100"
       > </a
@@ -59,17 +59,17 @@
       ><a name="141"
       >
   </a
-      ><a name="144" href="Relative-indentation.html#144" class="Postulate"
+      ><a name="D" href="Relative-indentation.html#D" class="Postulate"
       >D</a
       ><a name="145"
       >  </a
-      ><a name="147" href="Relative-indentation.html#147" class="Postulate"
+      ><a name="E" href="Relative-indentation.html#E" class="Postulate"
       >E</a
       ><a name="148"
       >
 
       </a
-      ><a name="156" href="Relative-indentation.html#156" class="Postulate"
+      ><a name="F" href="Relative-indentation.html#F" class="Postulate"
       >F</a
       ><a name="157"
       > </a
@@ -94,11 +94,11 @@
       ><a name="198"
       >
   </a
-      ><a name="201" href="Relative-indentation.html#201" class="Postulate"
+      ><a name="G" href="Relative-indentation.html#G" class="Postulate"
       >G</a
       ><a name="202"
       >  </a
-      ><a name="204" href="Relative-indentation.html#204" class="Postulate"
+      ><a name="H" href="Relative-indentation.html#H" class="Postulate"
       >H</a
       ><a name="205"
       >  </a
@@ -111,12 +111,12 @@
       ><a name="212"
       >
   </a
-      ><a name="215" href="Relative-indentation.html#215" class="Postulate"
+      ><a name="I" href="Relative-indentation.html#I" class="Postulate"
       >I</a
       ><a name="216"
       >
       </a
-      ><a name="223" href="Relative-indentation.html#223" class="Postulate"
+      ><a name="J" href="Relative-indentation.html#J" class="Postulate"
       >J</a
       ><a name="224"
       > </a
@@ -142,11 +142,11 @@
       ><a name="290"
       >
   </a
-      ><a name="293" href="Relative-indentation.html#293" class="Postulate"
+      ><a name="K" href="Relative-indentation.html#K" class="Postulate"
       >K</a
       ><a name="294"
       >  </a
-      ><a name="296" href="Relative-indentation.html#296" class="Postulate"
+      ><a name="L" href="Relative-indentation.html#L" class="Postulate"
       >L</a
       ><a name="297"
       >
@@ -157,7 +157,7 @@
       ><a name="309"
       >\begin{code}
       </a
-      ><a name="328" href="Relative-indentation.html#328" class="Postulate"
+      ><a name="M" href="Relative-indentation.html#M" class="Postulate"
       >M</a
       ><a name="329"
       > </a
@@ -182,7 +182,7 @@
       >record</a
       ><a name="387"
       > </a
-      ><a name="388" href="Relative-indentation.html#388" class="Record"
+      ><a name="R" href="Relative-indentation.html#R" class="Record"
       >R</a
       ><a name="389"
       > </a
@@ -203,7 +203,7 @@
       >field</a
       ><a name="410"
       > </a
-      ><a name="411" href="Relative-indentation.html#411" class="Field"
+      ><a name="R.N" href="Relative-indentation.html#R.N" class="Field"
       >N</a
       ><a name="412"
       > </a
@@ -251,7 +251,7 @@ text </a
       >postulate</a
       ><a name="646"
       > </a
-      ><a name="647" href="Relative-indentation.html#647" class="Postulate"
+      ><a name="O" href="Relative-indentation.html#O" class="Postulate"
       >O</a
       ><a name="648"
       > </a
@@ -275,7 +275,7 @@ text </a
       >postulate</a
       ><a name="735"
       > </a
-      ><a name="736" href="Relative-indentation.html#736" class="Postulate"
+      ><a name="o" href="Relative-indentation.html#o" class="Postulate"
       >o</a
       ><a name="737"
       > </a
@@ -283,7 +283,7 @@ text </a
       >:</a
       ><a name="739"
       > </a
-      ><a name="740" href="Relative-indentation.html#647" class="Postulate"
+      ><a name="740" href="Relative-indentation.html#O" class="Postulate"
       >O</a
       ><a name="741"
       >    
@@ -301,7 +301,7 @@ text </a
       ><a name="818"
       >
  </a
-      ><a name="820" href="Relative-indentation.html#820" class="Postulate"
+      ><a name="P" href="Relative-indentation.html#P" class="Postulate"
       >P</a
       ><a name="821"
       > </a
@@ -339,7 +339,7 @@ text </a
       ><a name="878"
       >
   </a
-      ><a name="881" href="Relative-indentation.html#881" class="Postulate"
+      ><a name="Q" href="Relative-indentation.html#Q" class="Postulate"
       >Q</a
       ><a name="882"
       > </a
@@ -377,7 +377,7 @@ text </a
       ><a name="947"
       >
           </a
-      ><a name="958" href="Relative-indentation.html#958" class="Postulate"
+      ><a name="S" href="Relative-indentation.html#S" class="Postulate"
       >S</a
       ><a name="959"
       > </a
@@ -421,7 +421,7 @@ text </a
       >postulate</a
       ><a name="1066"
       > </a
-      ><a name="1067" href="Relative-indentation.html#1067" class="Postulate"
+      ><a name="T" href="Relative-indentation.html#T" class="Postulate"
       >T</a
       ><a name="1068"
       > </a
@@ -434,7 +434,7 @@ text </a
       ><a name="1074"
       >
             </a
-      ><a name="1087" href="Relative-indentation.html#1087" class="Postulate"
+      ><a name="U" href="Relative-indentation.html#U" class="Postulate"
       >U</a
       ><a name="1088"
       > </a
@@ -479,7 +479,7 @@ text </a
       >postulate</a
       ><a name="1219"
       > </a
-      ><a name="1220" href="Relative-indentation.html#1220" class="Postulate"
+      ><a name="V" href="Relative-indentation.html#V" class="Postulate"
       >V</a
       ><a name="1221"
       > </a
@@ -492,7 +492,7 @@ text </a
       ><a name="1227"
       >
             </a
-      ><a name="1240" href="Relative-indentation.html#1240" class="Postulate"
+      ><a name="W" href="Relative-indentation.html#W" class="Postulate"
       >W</a
       ><a name="1241"
       > </a
@@ -513,7 +513,7 @@ text </a
       ><a name="1284"
       >\begin{code}
 </a
-      ><a name="1297" href="Relative-indentation.html#1297" class="Function"
+      ><a name="X" href="Relative-indentation.html#X" class="Function"
       >X</a
       ><a name="1298"
       > </a
@@ -526,7 +526,7 @@ text </a
       ><a name="1305"
       >
 </a
-      ><a name="1306" href="Relative-indentation.html#1297" class="Function"
+      ><a name="1306" href="Relative-indentation.html#X" class="Function"
       >X</a
       ><a name="1307"
       > </a
@@ -547,7 +547,7 @@ text </a
       ><a name="1328"
       >\begin{code}
 </a
-      ><a name="1341" href="Relative-indentation.html#1341" class="Function"
+      ><a name="Y" href="Relative-indentation.html#Y" class="Function"
       >Y</a
       ><a name="1342"
       > </a
@@ -560,7 +560,7 @@ text </a
       ><a name="1349"
       >
 </a
-      ><a name="1350" href="Relative-indentation.html#1341" class="Function"
+      ><a name="1350" href="Relative-indentation.html#Y" class="Function"
       >Y</a
       ><a name="1351"
       > </a
@@ -574,7 +574,7 @@ text </a
       >
 
 </a
-      ><a name="1365" href="Relative-indentation.html#1365" class="Function"
+      ><a name="Zzzzzzzzz" href="Relative-indentation.html#Zzzzzzzzz" class="Function"
       >Zzzzzzzzz</a
       ><a name="1374"
       > </a
@@ -595,7 +595,7 @@ text </a
       ><a name="1386"
       >
 </a
-      ><a name="1387" href="Relative-indentation.html#1365" class="Function"
+      ><a name="1387" href="Relative-indentation.html#Zzzzzzzzz" class="Function"
       >Zzzzzzzzz</a
       ><a name="1396"
       > </a
