--- a/test/LaTeXAndHTML/succeed/RsTQuotedDelim.html
+++ b/test/LaTeXAndHTML/succeed/RsTQuotedDelim.html
@@ -19,7 +19,7 @@
       >module</a
       ><a name="15"
       > </a
-      ><a name="16" href="RsTQuotedDelim.html#1" class="Module"
+      ><a name="16" href="RsTQuotedDelim.html#RsTQuotedDelim" class="Module"
       >RsTQuotedDelim</a
       ><a name="30"
       > </a
@@ -33,7 +33,7 @@
       >data</a
       ><a name="49"
       > </a
-      ><a name="50" href="RsTQuotedDelim.html#50" class="Datatype"
+      ><a name="Bool" href="RsTQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
       ><a name="54"
       > </a
@@ -50,7 +50,7 @@
       ><a name="66"
       >
         </a
-      ><a name="75" href="RsTQuotedDelim.html#75" class="InductiveConstructor"
+      ><a name="Bool.true" href="RsTQuotedDelim.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="79"
       > </a
@@ -58,12 +58,12 @@
       >:</a
       ><a name="81"
       > </a
-      ><a name="82" href="RsTQuotedDelim.html#50" class="Datatype"
+      ><a name="82" href="RsTQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
       ><a name="86"
       >
         </a
-      ><a name="95" href="RsTQuotedDelim.html#95" class="InductiveConstructor"
+      ><a name="Bool.false" href="RsTQuotedDelim.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="100"
       > </a
@@ -71,12 +71,12 @@
       >:</a
       ><a name="102"
       > </a
-      ><a name="103" href="RsTQuotedDelim.html#50" class="Datatype"
+      ><a name="103" href="RsTQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
       ><a name="107"
       >
         </a
-      ><a name="116" href="RsTQuotedDelim.html#116" class="InductiveConstructor"
+      ><a name="Bool.dunno" href="RsTQuotedDelim.html#Bool.dunno" class="InductiveConstructor"
       >dunno</a
       ><a name="121"
       > </a
@@ -84,12 +84,12 @@
       >:</a
       ><a name="123"
       > </a
-      ><a name="124" href="RsTQuotedDelim.html#50" class="Datatype"
+      ><a name="124" href="RsTQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
       ><a name="128"
       >
         </a
-      ><a name="137" href="RsTQuotedDelim.html#137" class="InductiveConstructor"
+      ><a name="Bool.aa" href="RsTQuotedDelim.html#Bool.aa" class="InductiveConstructor"
       >aa</a
       ><a name="139"
       > </a
@@ -101,7 +101,7 @@
       >{- :: -}</a
       ><a name="150"
       > </a
-      ><a name="151" href="RsTQuotedDelim.html#50" class="Datatype"
+      ><a name="151" href="RsTQuotedDelim.html#Bool" class="Datatype"
       >Bool</a
       ><a name="155"
       >
