--- a/test/LaTeXAndHTML/succeed/Tag.html
+++ b/test/LaTeXAndHTML/succeed/Tag.html
@@ -24,7 +24,7 @@
       >module</a
       ><a name="94"
       > </a
-      ><a name="95" href="Tag.html#1" class="Module"
+      ><a name="95" href="Tag.html#Tag" class="Module"
       >Tag</a
       ><a name="98"
       > </a
@@ -38,7 +38,7 @@
       >module</a
       ><a name="112"
       > </a
-      ><a name="113" href="Tag.html#113" class="Module"
+      ><a name="Apa" href="Tag.html#Apa" class="Module"
       >Apa</a
       ><a name="116"
       > </a
@@ -48,7 +48,7 @@
       >
 
 </a
-      ><a name="124" href="Tag.html#124" class="Function"
+      ><a name="bepa" href="Tag.html#bepa" class="Function"
       >bepa</a
       ><a name="128"
       > </a
@@ -69,7 +69,7 @@
       ><a name="140"
       >
 </a
-      ><a name="141" href="Tag.html#124" class="Function"
+      ><a name="141" href="Tag.html#bepa" class="Function"
       >bepa</a
       ><a name="145"
       > </a
@@ -91,7 +91,7 @@
       >data</a
       ><a name="157"
       > </a
-      ><a name="158" href="Tag.html#158" class="Datatype"
+      ><a name="Cepa" href="Tag.html#Cepa" class="Datatype"
       >Cepa</a
       ><a name="162"
       > </a
@@ -108,7 +108,7 @@
       ><a name="174"
       >
   </a
-      ><a name="177" href="Tag.html#177" class="InductiveConstructor"
+      ><a name="Cepa.cepa" href="Tag.html#Cepa.cepa" class="InductiveConstructor"
       >cepa</a
       ><a name="181"
       > </a
@@ -116,7 +116,7 @@
       >:</a
       ><a name="183"
       > </a
-      ><a name="184" href="Tag.html#158" class="Datatype"
+      ><a name="184" href="Tag.html#Cepa" class="Datatype"
       >Cepa</a
       ><a name="188"
       >
@@ -126,7 +126,7 @@
       >record</a
       ><a name="196"
       > </a
-      ><a name="197" href="Tag.html#197" class="Record"
+      ><a name="Depa" href="Tag.html#Depa" class="Record"
       >Depa</a
       ><a name="201"
       > </a
@@ -148,7 +148,7 @@
       ><a name="222"
       >
     </a
-      ><a name="227" href="Tag.html#227" class="Field"
+      ><a name="Depa.depa" href="Tag.html#Depa.depa" class="Field"
       >depa</a
       ><a name="231"
       > </a
@@ -167,7 +167,7 @@
       ><a name="248"
       >
   </a
-      ><a name="251" href="Tag.html#251" class="Postulate"
+      ><a name="epa" href="Tag.html#epa" class="Postulate"
       >epa</a
       ><a name="254"
       > </a
@@ -186,7 +186,7 @@
       ><a name="271"
       >
   </a
-      ><a name="274" href="Tag.html#274" class="Postulate"
+      ><a name="&#945;" href="Tag.html#&#945;" class="Postulate"
       >&#945;</a
       ><a name="275"
       >   </a
@@ -199,7 +199,7 @@
       ><a name="283"
       >
   </a
-      ><a name="286" href="Tag.html#286" class="Postulate Operator"
+      ><a name="_&#8728;_" href="Tag.html#_&#8728;_" class="Postulate Operator"
       >_&#8728;_</a
       ><a name="289"
       > </a
