--- a/test/LaTeXAndHTML/succeed/ThreeNewLines.html
+++ b/test/LaTeXAndHTML/succeed/ThreeNewLines.html
@@ -26,7 +26,7 @@
       >module</a
       ><a name="84"
       > </a
-      ><a name="85" href="ThreeNewLines.html#1" class="Module"
+      ><a name="85" href="ThreeNewLines.html#ThreeNewLines" class="Module"
       >ThreeNewLines</a
       ><a name="98"
       > </a
