--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
@@ -28,7 +28,7 @@
       >
   
   </a
-      ><a name="123" href="Trailing-whitespace.html#123" class="Postulate"
+      ><a name="A" href="Trailing-whitespace.html#A" class="Postulate"
       >A</a
       ><a name="124"
       > </a
@@ -41,7 +41,7 @@
       ><a name="130"
       >  
   </a
-      ><a name="135" href="Trailing-whitespace.html#135" class="Postulate"
+      ><a name="B" href="Trailing-whitespace.html#B" class="Postulate"
       >B</a
       ><a name="136"
       > </a
@@ -130,7 +130,7 @@
       ><a name="435"
       >
     </a
-      ><a name="440" href="Trailing-whitespace.html#440" class="Postulate"
+      ><a name="C" href="Trailing-whitespace.html#C" class="Postulate"
       >C</a
       ><a name="441"
       > </a
@@ -156,7 +156,7 @@
       ><a name="506"
       >
   </a
-      ><a name="509" href="Trailing-whitespace.html#509" class="Postulate"
+      ><a name="F" href="Trailing-whitespace.html#F" class="Postulate"
       >F</a
       ><a name="510"
       >  </a
@@ -177,7 +177,7 @@
       ><a name="523"
       >
   </a
-      ><a name="526" href="Trailing-whitespace.html#526" class="Postulate"
+      ><a name="X" href="Trailing-whitespace.html#X" class="Postulate"
       >X</a
       ><a name="527"
       >  </a
@@ -185,7 +185,7 @@
       >:</a
       ><a name="530"
       > </a
-      ><a name="531" href="Trailing-whitespace.html#509" class="Postulate"
+      ><a name="531" href="Trailing-whitespace.html#F" class="Postulate"
       >F</a
       ><a name="532"
       >  
@@ -196,7 +196,7 @@
       ><a name="546"
       >\begin{code}
           </a
-      ><a name="569" href="Trailing-whitespace.html#123" class="Postulate"
+      ><a name="569" href="Trailing-whitespace.html#A" class="Postulate"
       >A</a
       ><a name="570"
       >
