--- a/test/LaTeXAndHTML/succeed/TrailingColon.html
+++ b/test/LaTeXAndHTML/succeed/TrailingColon.html
@@ -23,7 +23,7 @@ aaa
       >module</a
       ><a name="32"
       > </a
-      ><a name="33" href="TrailingColon.html#1" class="Module"
+      ><a name="33" href="TrailingColon.html#TrailingColon" class="Module"
       >TrailingColon</a
       ><a name="46"
       > </a
@@ -37,7 +37,7 @@ aaa
       >data</a
       ><a name="66"
       > </a
-      ><a name="67" href="TrailingColon.html#67" class="Datatype"
+      ><a name="Bool" href="TrailingColon.html#Bool" class="Datatype"
       >Bool</a
       ><a name="71"
       > </a
@@ -54,7 +54,7 @@ aaa
       ><a name="83"
       >
             </a
-      ><a name="96" href="TrailingColon.html#96" class="InductiveConstructor"
+      ><a name="Bool.true" href="TrailingColon.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="100"
       > </a
@@ -62,12 +62,12 @@ aaa
       >:</a
       ><a name="102"
       > </a
-      ><a name="103" href="TrailingColon.html#67" class="Datatype"
+      ><a name="103" href="TrailingColon.html#Bool" class="Datatype"
       >Bool</a
       ><a name="107"
       >
             </a
-      ><a name="120" href="TrailingColon.html#120" class="InductiveConstructor"
+      ><a name="Bool.false" href="TrailingColon.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="125"
       > </a
@@ -75,12 +75,12 @@ aaa
       >:</a
       ><a name="127"
       > </a
-      ><a name="128" href="TrailingColon.html#67" class="Datatype"
+      ><a name="128" href="TrailingColon.html#Bool" class="Datatype"
       >Bool</a
       ><a name="132"
       >
             </a
-      ><a name="145" href="TrailingColon.html#145" class="InductiveConstructor"
+      ><a name="Bool.aa" href="TrailingColon.html#Bool.aa" class="InductiveConstructor"
       >aa</a
       ><a name="147"
       > </a
@@ -88,13 +88,13 @@ aaa
       >:</a
       ><a name="149"
       > </a
-      ><a name="150" href="TrailingColon.html#67" class="Datatype"
+      ><a name="150" href="TrailingColon.html#Bool" class="Datatype"
       >Bool</a
       ><a name="154"
       >
 
         </a
-      ><a name="164" href="TrailingColon.html#164" class="Function"
+      ><a name="a" href="TrailingColon.html#a" class="Function"
       >a</a
       ><a name="165"
       > </a
@@ -102,12 +102,12 @@ aaa
       >:</a
       ><a name="167"
       > </a
-      ><a name="168" href="TrailingColon.html#67" class="Datatype"
+      ><a name="168" href="TrailingColon.html#Bool" class="Datatype"
       >Bool</a
       ><a name="172"
       >
         </a
-      ><a name="181" href="TrailingColon.html#164" class="Function"
+      ><a name="181" href="TrailingColon.html#a" class="Function"
       >a</a
       ><a name="182"
       > </a
@@ -115,7 +115,7 @@ aaa
       >=</a
       ><a name="184"
       > </a
-      ><a name="185" href="TrailingColon.html#96" class="InductiveConstructor"
+      ><a name="185" href="TrailingColon.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="189"
       >
@@ -130,7 +130,7 @@ bli
       ><a name="208"
       >::
         </a
-      ><a name="219" href="TrailingColon.html#219" class="Function"
+      ><a name="b" href="TrailingColon.html#b" class="Function"
       >b</a
       ><a name="220"
       > </a
@@ -138,12 +138,12 @@ bli
       >:</a
       ><a name="222"
       > </a
-      ><a name="223" href="TrailingColon.html#67" class="Datatype"
+      ><a name="223" href="TrailingColon.html#Bool" class="Datatype"
       >Bool</a
       ><a name="227"
       >
         </a
-      ><a name="236" href="TrailingColon.html#219" class="Function"
+      ><a name="236" href="TrailingColon.html#b" class="Function"
       >b</a
       ><a name="237"
       > </a
@@ -151,7 +151,7 @@ bli
       >=</a
       ><a name="239"
       > </a
-      ><a name="240" href="TrailingColon.html#120" class="InductiveConstructor"
+      ><a name="240" href="TrailingColon.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="245"
       >
@@ -164,7 +164,7 @@ bli
       >:
 
         </a
-      ><a name="271" href="TrailingColon.html#271" class="Function"
+      ><a name="c" href="TrailingColon.html#c" class="Function"
       >c</a
       ><a name="272"
       > </a
@@ -172,12 +172,12 @@ bli
       >:</a
       ><a name="274"
       > </a
-      ><a name="275" href="TrailingColon.html#67" class="Datatype"
+      ><a name="275" href="TrailingColon.html#Bool" class="Datatype"
       >Bool</a
       ><a name="279"
       >
         </a
-      ><a name="288" href="TrailingColon.html#271" class="Function"
+      ><a name="288" href="TrailingColon.html#c" class="Function"
       >c</a
       ><a name="289"
       > </a
@@ -185,7 +185,7 @@ bli
       >=</a
       ><a name="291"
       > </a
-      ><a name="292" href="TrailingColon.html#145" class="InductiveConstructor"
+      ><a name="292" href="TrailingColon.html#Bool.aa" class="InductiveConstructor"
       >aa</a
       ><a name="294"
       >
