--- a/test/LaTeXAndHTML/succeed/UnicodeInput.html
+++ b/test/LaTeXAndHTML/succeed/UnicodeInput.html
@@ -22,7 +22,7 @@
       >data</a
       ><a name="78"
       > </a
-      ><a name="79" href="UnicodeInput.html#79" class="Datatype"
+      ><a name="&#945;&#946;&#947;&#948;&#949;&#950;&#952;&#953;&#954;&#955;&#956;&#957;&#958;&#961;&#963;&#964;&#965;&#966;&#967;&#968;&#969;" href="UnicodeInput.html#&#945;&#946;&#947;&#948;&#949;&#950;&#952;&#953;&#954;&#955;&#956;&#957;&#958;&#961;&#963;&#964;&#965;&#966;&#967;&#968;&#969;" class="Datatype"
       >&#945;&#946;&#947;&#948;&#949;&#950;&#952;&#953;&#954;&#955;&#956;&#957;&#958;&#961;&#963;&#964;&#965;&#966;&#967;&#968;&#969;</a
       ><a name="100"
       > </a
@@ -45,7 +45,7 @@
       ><a name="124"
       >
   </a
-      ><a name="127" href="UnicodeInput.html#127" class="Postulate"
+      ><a name="&#8594;&#8658;&#8667;&#8649;&#8644;&#8614;&#8680;&#8608;&#8640;&#8641;" href="UnicodeInput.html#&#8594;&#8658;&#8667;&#8649;&#8644;&#8614;&#8680;&#8608;&#8640;&#8641;" class="Postulate"
       >&#8594;&#8658;&#8667;&#8649;&#8644;&#8614;&#8680;&#8608;&#8640;&#8641;</a
       ><a name="137"
       > </a
