--- a/test/LaTeXAndHTML/succeed/Indenting2.html
+++ b/test/LaTeXAndHTML/succeed/Indenting2.html
@@ -24,7 +24,7 @@
       >data</a
       ><a name="80"
       > </a
-      ><a name="81" href="Indenting2.html#81" class="Datatype"
+      ><a name="Nat" href="Indenting2.html#Nat" class="Datatype"
       >Nat</a
       ><a name="84"
       > </a
@@ -41,7 +41,7 @@
       ><a name="96"
       >
   </a
-      ><a name="99" href="Indenting2.html#99" class="InductiveConstructor"
+      ><a name="Nat.zero" href="Indenting2.html#Nat.zero" class="InductiveConstructor"
       >zero</a
       ><a name="103"
       >  </a
@@ -49,12 +49,12 @@
       >:</a
       ><a name="106"
       > </a
-      ><a name="107" href="Indenting2.html#81" class="Datatype"
+      ><a name="107" href="Indenting2.html#Nat" class="Datatype"
       >Nat</a
       ><a name="110"
       >
   </a
-      ><a name="113" href="Indenting2.html#113" class="InductiveConstructor"
+      ><a name="Nat.suc" href="Indenting2.html#Nat.suc" class="InductiveConstructor"
       >suc</a
       ><a name="116"
       >   </a
@@ -62,7 +62,7 @@
       >:</a
       ><a name="120"
       > </a
-      ><a name="121" href="Indenting2.html#81" class="Datatype"
+      ><a name="121" href="Indenting2.html#Nat" class="Datatype"
       >Nat</a
       ><a name="124"
       > </a
@@ -70,7 +70,7 @@
       >-&gt;</a
       ><a name="127"
       > </a
-      ><a name="128" href="Indenting2.html#81" class="Datatype"
+      ><a name="128" href="Indenting2.html#Nat" class="Datatype"
       >Nat</a
       ><a name="131"
       >
