--- a/test/LaTeXAndHTML/succeed/Issue1053.html
+++ b/test/LaTeXAndHTML/succeed/Issue1053.html
@@ -18,7 +18,7 @@
       ><a name="61"
       >\begin{code}
 </a
-      ><a name="74" href="Issue1053.html#74" class="Function"
+      ><a name="id" href="Issue1053.html#id" class="Function"
       >id</a
       ><a name="76"
       > </a
@@ -59,7 +59,7 @@
       ><a name="96"
       >
 </a
-      ><a name="97" href="Issue1053.html#74" class="Function"
+      ><a name="97" href="Issue1053.html#id" class="Function"
       >id</a
       ><a name="99"
       > </a
@@ -93,7 +93,7 @@
       >
 
 </a
-      ><a name="115" href="Issue1053.html#115" class="Function"
+      ><a name="foo" href="Issue1053.html#foo" class="Function"
       >foo</a
       ><a name="118"
       > </a
@@ -134,7 +134,7 @@
       ><a name="138"
       >
 </a
-      ><a name="139" href="Issue1053.html#115" class="Function"
+      ><a name="139" href="Issue1053.html#foo" class="Function"
       >foo</a
       ><a name="142"
       > </a
@@ -150,7 +150,7 @@
       >=</a
       ><a name="148"
       > </a
-      ><a name="149" href="Issue1053.html#74" class="Function"
+      ><a name="149" href="Issue1053.html#id" class="Function"
       >id</a
       ><a name="151"
       > </a
