--- a/test/LaTeXAndHTML/succeed/Issue1241.html
+++ b/test/LaTeXAndHTML/succeed/Issue1241.html
@@ -28,7 +28,7 @@ This is the actual test.
       >module</a
       ><a name="120"
       > </a
-      ><a name="121" href="Issue1241.html#1" class="Module"
+      ><a name="121" href="Issue1241.html#Issue1241" class="Module"
       >_</a
       ><a name="122"
       > </a
@@ -43,7 +43,7 @@ This is the actual test.
       ><a name="139"
       >
   </a
-      ><a name="142" href="Issue1241.html#142" class="Postulate"
+      ><a name="IsThisCorrectlyLaTeXed" href="Issue1241.html#IsThisCorrectlyLaTeXed" class="Postulate"
       >IsThisCorrectlyLaTeXed</a
       ><a name="164"
       > </a
