--- a/test/LaTeXAndHTML/succeed/Issue1618.html
+++ b/test/LaTeXAndHTML/succeed/Issue1618.html
@@ -21,7 +21,7 @@ The let should be properly aligned in the following code:
       ><a name="173"
       >\begin{code}
 </a
-      ><a name="186" href="Issue1618.html#186" class="Function"
+      ><a name="id" href="Issue1618.html#id" class="Function"
       >id</a
       ><a name="188"
       > </a
@@ -62,7 +62,7 @@ The let should be properly aligned in the following code:
       ><a name="208"
       >
 </a
-      ><a name="209" href="Issue1618.html#186" class="Function"
+      ><a name="209" href="Issue1618.html#id" class="Function"
       >id</a
       ><a name="211"
       > </a
@@ -88,7 +88,7 @@ The let should be properly aligned in the following code:
       >:</a
       ><a name="231"
       > </a
-      ><a name="232" href="Issue1618.html#277" class="Function"
+      ><a name="232" href="Issue1618.html#B" class="Function"
       >B</a
       ><a name="233"
       > </a
@@ -96,7 +96,7 @@ The let should be properly aligned in the following code:
       >&#8594;</a
       ><a name="235"
       > </a
-      ><a name="236" href="Issue1618.html#277" class="Function"
+      ><a name="236" href="Issue1618.html#B" class="Function"
       >B</a
       ><a name="237"
       >
@@ -140,7 +140,7 @@ The let should be properly aligned in the following code:
       ><a name="272"
       >
     </a
-      ><a name="277" href="Issue1618.html#277" class="Function"
+      ><a name="B" href="Issue1618.html#B" class="Function"
       >B</a
       ><a name="278"
       > </a
@@ -153,7 +153,7 @@ The let should be properly aligned in the following code:
       ><a name="284"
       >
     </a
-      ><a name="289" href="Issue1618.html#277" class="Function"
+      ><a name="289" href="Issue1618.html#B" class="Function"
       >B</a
       ><a name="290"
       > </a
@@ -176,7 +176,7 @@ keyword, as opposed to on a new line.
       ><a name="408"
       >\begin{code}
 </a
-      ><a name="421" href="Issue1618.html#421" class="Function"
+      ><a name="di" href="Issue1618.html#di" class="Function"
       >di</a
       ><a name="423"
       > </a
@@ -217,7 +217,7 @@ keyword, as opposed to on a new line.
       ><a name="443"
       >
 </a
-      ><a name="444" href="Issue1618.html#421" class="Function"
+      ><a name="444" href="Issue1618.html#di" class="Function"
       >di</a
       ><a name="446"
       > </a
@@ -242,7 +242,7 @@ keyword, as opposed to on a new line.
       >:</a
       ><a name="463"
       > </a
-      ><a name="464" href="Issue1618.html#509" class="Function"
+      ><a name="464" href="Issue1618.html#B" class="Function"
       >B</a
       ><a name="465"
       > </a
@@ -250,7 +250,7 @@ keyword, as opposed to on a new line.
       >&#8594;</a
       ><a name="467"
       > </a
-      ><a name="468" href="Issue1618.html#509" class="Function"
+      ><a name="468" href="Issue1618.html#B" class="Function"
       >B</a
       ><a name="469"
       >
@@ -293,7 +293,7 @@ keyword, as opposed to on a new line.
       >where</a
       ><a name="507"
       >  </a
-      ><a name="509" href="Issue1618.html#509" class="Function"
+      ><a name="B" href="Issue1618.html#B" class="Function"
       >B</a
       ><a name="510"
       > </a
@@ -306,7 +306,7 @@ keyword, as opposed to on a new line.
       ><a name="516"
       >
          </a
-      ><a name="526" href="Issue1618.html#509" class="Function"
+      ><a name="526" href="Issue1618.html#B" class="Function"
       >B</a
       ><a name="527"
       > </a
