--- a/test/LaTeXAndHTML/succeed/Issue2536.html
+++ b/test/LaTeXAndHTML/succeed/Issue2536.html
@@ -25,7 +25,7 @@
       >module</a
       ><a name="95"
       > </a
-      ><a name="96" href="Issue2536.html#1" class="Module"
+      ><a name="96" href="Issue2536.html#Issue2536" class="Module"
       >_</a
       ><a name="97"
       > </a
@@ -34,7 +34,7 @@
       ><a name="103"
       >
 </a
-      ><a name="104" href="Issue2536.html#104" class="Function"
+      ><a name="id" href="Issue2536.html#id" class="Function"
       >id</a
       ><a name="106"
       > </a
@@ -75,7 +75,7 @@
       ><a name="126"
       >
 </a
-      ><a name="127" href="Issue2536.html#104" class="Function"
+      ><a name="127" href="Issue2536.html#id" class="Function"
       >id</a
       ><a name="129"
       > </a
