--- a/test/LaTeXAndHTML/succeed/Multiline.html
+++ b/test/LaTeXAndHTML/succeed/Multiline.html
@@ -25,13 +25,13 @@
       >import</a
       ><a name="84"
       > </a
-      ><a name="85" href="Agda.Builtin.String.html#1" class="Module"
+      ><a name="85" href="Agda.Builtin.String.html#Agda" class="Module"
       >Agda.Builtin.String</a
       ><a name="104"
       >
 
 </a
-      ><a name="106" href="Multiline.html#106" class="Function"
+      ><a name="argh" href="Multiline.html#argh" class="Function"
       >argh</a
       ><a name="110"
       > </a
@@ -39,12 +39,12 @@
       >:</a
       ><a name="112"
       > </a
-      ><a name="113" href="Agda.Builtin.String.html#165" class="Postulate"
+      ><a name="113" href="Agda.Builtin.String.html#String" class="Postulate"
       >String</a
       ><a name="119"
       >
 </a
-      ><a name="120" href="Multiline.html#106" class="Function"
+      ><a name="120" href="Multiline.html#argh" class="Function"
       >argh</a
       ><a name="124"
       > </a
