--- a/test/LaTeXAndHTML/succeed/TeXExtension.html
+++ b/test/LaTeXAndHTML/succeed/TeXExtension.html
@@ -26,7 +26,7 @@ Foo
       >module</a
       ><a name="87"
       > </a
-      ><a name="88" href="TeXExtension.html#1" class="Module"
+      ><a name="88" href="TeXExtension.html#TeXExtension" class="Module"
       >TeXExtension</a
       ><a name="100"
       > </a
@@ -40,7 +40,7 @@ Foo
       >data</a
       ><a name="114"
       > </a
-      ><a name="115" href="TeXExtension.html#115" class="Datatype"
+      ><a name="Bool" href="TeXExtension.html#Bool" class="Datatype"
       >Bool</a
       ><a name="119"
       > </a
@@ -57,7 +57,7 @@ Foo
       ><a name="131"
       >
     </a
-      ><a name="136" href="TeXExtension.html#136" class="InductiveConstructor"
+      ><a name="Bool.true" href="TeXExtension.html#Bool.true" class="InductiveConstructor"
       >true</a
       ><a name="140"
       > </a
@@ -65,12 +65,12 @@ Foo
       >:</a
       ><a name="142"
       > </a
-      ><a name="143" href="TeXExtension.html#115" class="Datatype"
+      ><a name="143" href="TeXExtension.html#Bool" class="Datatype"
       >Bool</a
       ><a name="147"
       >
     </a
-      ><a name="152" href="TeXExtension.html#152" class="InductiveConstructor"
+      ><a name="Bool.false" href="TeXExtension.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="157"
       > </a
@@ -78,13 +78,13 @@ Foo
       >:</a
       ><a name="159"
       > </a
-      ><a name="160" href="TeXExtension.html#115" class="Datatype"
+      ><a name="160" href="TeXExtension.html#Bool" class="Datatype"
       >Bool</a
       ><a name="164"
       >
 
   </a
-      ><a name="168" href="TeXExtension.html#168" class="Function"
+      ><a name="b" href="TeXExtension.html#b" class="Function"
       >b</a
       ><a name="169"
       > </a
@@ -92,12 +92,12 @@ Foo
       >:</a
       ><a name="171"
       > </a
-      ><a name="172" href="TeXExtension.html#115" class="Datatype"
+      ><a name="172" href="TeXExtension.html#Bool" class="Datatype"
       >Bool</a
       ><a name="176"
       >
   </a
-      ><a name="179" href="TeXExtension.html#168" class="Function"
+      ><a name="179" href="TeXExtension.html#b" class="Function"
       >b</a
       ><a name="180"
       > </a
@@ -105,7 +105,7 @@ Foo
       >=</a
       ><a name="182"
       > </a
-      ><a name="183" href="TeXExtension.html#152" class="InductiveConstructor"
+      ><a name="183" href="TeXExtension.html#Bool.false" class="InductiveConstructor"
       >false</a
       ><a name="188"
       >
