--- a/test/LaTeXAndHTML/succeed/UnicodeDeclare.html
+++ b/test/LaTeXAndHTML/succeed/UnicodeDeclare.html
@@ -32,7 +32,7 @@
       ><a name="268"
       >
 </a
-      ><a name="269" href="UnicodeDeclare.html#269" class="Function"
+      ><a name="&#9711;" href="UnicodeDeclare.html#&#9711;" class="Function"
       >&#9711;</a
       ><a name="270"
       > </a
